--- Auto-Git Commit ---

--- a/Virtualization/QEMU/1. summary/2. QEMU组件.md
+++ b/Virtualization/QEMU/1. summary/2. QEMU组件.md
@@ -6,8 +6,8 @@
 - [模块模型](#模块模型)
   - [块设备模块module_block](#块设备模块module_block)
   - [主机模块module_machine](#主机模块module_machine)
-  - [1.3 设备模块module_device](#13-设备模块module_device)
-  - [1.4 模块之间的关系](#14-模块之间的关系)
+  - [设备模块module_device](#设备模块module_device)
+  - [模块之间的关系](#模块之间的关系)
   - [1.5 模块的初始化](#15-模块的初始化)
 - [2 libkvm模块](#2-libkvm模块)
 - [3 virtio组件](#3-virtio组件)
@@ -46,15 +46,15 @@
 
 machine模块的初始化标志为`MODULE_INIT_MACHINE`。
 
-## 1.3 设备模块module_device
+## 设备模块module_device
 
 设备模块是QEMU中**数量最大**、**功能最丰富**的模块，用于**模拟各种各样的设备**、**外设**、**适配器**等。
 
 设备模块的主要实现在QEMU源代码目录的**hw子目录**中，既实现了包括**网卡**、**图形适配器**、**蓝牙**等方面的**具体物理设备的模拟**，也实现了**PCI**、**ISA**等**局部总线**，还提供了基于**PPC**、OMAP、MIPS等**SoC系统**的**片上组件实现**。
 
-这些模块的初始化标志为**MODULE\_INIT\_DEVICE**。
+这些模块的初始化标志为`MODULE_INIT_DEVICE`。
 
-## 1.4 模块之间的关系
+## 模块之间的关系
 
 以上三种模块为QEMU的工作提供了灵活性的支持，在**不同的场景**下，通过**搭配不同的模块**，实现**不同的功能**。
 
