--- Auto-Git Commit ---

--- a/Virtualization/QEMU/1. summary/2. QEMU组件.md
+++ b/Virtualization/QEMU/1. summary/2. QEMU组件.md
@@ -12,7 +12,7 @@
 - [libkvm模块](#libkvm模块)
 - [virtio组件](#virtio组件)
   - [完全虚拟化和半虚拟化](#完全虚拟化和半虚拟化)
-  - [3.2 front\-end实现概述](#32-front-end实现概述)
+  - [front-end实现概述](#front-end实现概述)
     - [3.2.1 scan设备](#321-scan设备)
     - [3.2.2 准备virt\-queue: notify函数](#322-准备virt-queue-notify函数)
     - [3.2.3 注册用户态空间设备文件](#323-注册用户态空间设备文件)
@@ -230,7 +230,7 @@ virtio的驱动程序可以使用**0个或者多个队列**，具体的队列数
 
 **virtio实质**上是通过**virt\-queue**作为**缓冲**，为**Guest OS**和**Hypervisor**之间的**驱动程序数据接口**提供了一个框架。
 
-## 3.2 front\-end实现概述
+## front-end实现概述
 
 在 **Linux 内核**的代码中可以找到 **virtio** 的**front\-end驱动程序**的实现方式，在这里简要概述如下。
 
