--- Auto-Git Commit ---

--- a/Virtualization/QEMU/1. summary/2. QEMU组件.md
+++ b/Virtualization/QEMU/1. summary/2. QEMU组件.md
@@ -13,8 +13,8 @@
 - [virtio组件](#virtio组件)
   - [完全虚拟化和半虚拟化](#完全虚拟化和半虚拟化)
   - [front-end实现概述](#front-end实现概述)
-    - [3.2.1 scan设备](#321-scan设备)
-    - [3.2.2 准备virt\-queue: notify函数](#322-准备virt-queue-notify函数)
+    - [scan设备](#scan设备)
+    - [准备virt\-queue: notify函数](#准备virt-queue-notify函数)
     - [3.2.3 注册用户态空间设备文件](#323-注册用户态空间设备文件)
   - [3.3 virtio发起I/O请求](#33-virtio发起io请求)
 
@@ -234,13 +234,15 @@ virtio的驱动程序可以使用**0个或者多个队列**，具体的队列数
 
 在 **Linux 内核**的代码中可以找到 **virtio** 的**front\-end驱动程序**的实现方式，在这里简要概述如下。
 
-### 3.2.1 scan设备
+### scan设备
 
-首先需要**自行**实现**scan设备**的功能，然后调用**register\_virtio\_device** 函数来**注册发现的虚拟设备**。参考 drivers/lguest/lguest\_device.c 中的 scan\_devices函数。一个典型的实现是**虚拟机主机**提供的**共享内存配置**，其中提供了虚拟设备的列表相同的配置，然后自己根据配置注册device。
+首先需要**自行**实现**scan设备**的功能，然后调用`register_virtio_device` 函数来**注册发现的虚拟设备**。
+
+参考 `drivers/lguest/lguest_device.c` 中的 `scan\_devices`函数。一个典型的实现是**虚拟机主机**提供的**共享内存配置**，其中提供了虚拟设备的列表相同的配置，然后自己根据配置注册device。
 
 virtio的**设备扫描功能**类似**PCI总线的工作方式**，**PCI**首先扫描**各个硬件插槽**，然后**发现**新的PCI设备，接着**创建device结构**，再调用到驱动的**probe**函数实现**驱动和device结构**的匹配。device结构体的生命周期包括扫描过程的各个阶段。
 
-### 3.2.2 准备virt\-queue: notify函数
+### 准备virt\-queue: notify函数
 
 接下来，需要为 **virtio\_device** 设备准备 **virt\-queue** 队列，具体的实现可以参考 kvm\_find\_vq 函数，实现的重点是需要提供**符合 virt\-queue 结构**的 **notify函数**，该函数用于**通知host主机队列中已经有消息存在**，可以进行下一步的操作，一般是**hypercall**，就是通过**vmcall指令**或者**traps陷阱代码**来通知Hypervisor执行进一步的操作，代码如下。
 
