--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -5,8 +5,8 @@
 
 - [性能监控的多个版本](#性能监控的多个版本)
 - [确定处理器所支持的功能](#确定处理器所支持的功能)
-- [2 IA32\_PMCx寄存器在各版本中的数量](#2-ia32_pmcx寄存器在各版本中的数量)
-- [3 IA32\_PMCx寄存器的宽度](#3-ia32_pmcx寄存器的宽度)
+- [IA32_PMCx寄存器在各版本中的数量](#ia32_pmcx寄存器在各版本中的数量)
+- [IA32_PMCx寄存器的宽度](#ia32_pmcx寄存器的宽度)
   - [3.1 IA32\_PMCx寄存器full\-width值](#31-ia32_pmcx寄存器full-width值)
 - [4 预定义的event](#4-预定义的event)
 
@@ -62,13 +62,13 @@ Intel64手册上介绍了**3个版本**。
 
 下面还打印出所支持的**7个event**数量，其中reference cycle event是不可用的，这些事件是**pre\-defined（预定义**）architectural化的event。
 
-# 2 IA32\_PMCx寄存器在各版本中的数量
+# IA32_PMCx寄存器在各版本中的数量
 
 在Intel64手册的**MSR寄存器表**中列举了architectural化的数个IA32\_PMCx寄存器，它们所需要支持的条件如下。
 
->支持**编号x**的**PMC寄存器**必须**CPUID.0AH：EAX\[7：0\]\>x(！！！这是版本ID**)。
+>支持**编号x**的**PMC寄存器**必须`CPUID.0AH：EAX[7：0]`>x(！！！这是版本ID)。
 
-举例来说，如果需要支持**编号为3的PMC寄存器**（即IA32\_PMC3寄存器），那么EAX\[7：0\]\>3。因此我们看到**版本ID为4**，支持4个IA32\_PMC寄存器。
+举例来说，如果需要支持**编号为3的PMC寄存器**（即IA32\_PMC3寄存器），那么`EAX[7：0]`>3。因此我们看到**版本ID为4**，支持4个IA32\_PMC寄存器。
 
 下面是IA32\_PMC寄存器在各版本中的数量。
 
@@ -80,9 +80,9 @@ Intel64手册上介绍了**3个版本**。
 
 ④ 在**Core i7**处理器版本3中支持4个，即IA32\_PMC0到IA32\_PMC3。
 
-CPUID.0A：EAX\[7：0\]的值决定支持**多少个IA32\_PMCx寄存器(！！！**)，EAX\[7：0\]\>3表示**最少可支持4个**，因此实际上EAX\[7：0\]=4时（如上所示）并不意味着有版本4的出现，它只是表示支持4个PMC寄存器。因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
+`CPUID.0A：EAX[7：0]`的值决定支持**多少个IA32\_PMCx寄存器(！！！**)，`EAX[7：0]`>3表示**最少可支持4个**，因此实际上`EAX[7：0]`=4时（如上所示）并不意味着有版本4的出现，它只是表示支持4个PMC寄存器。因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
 
-# 3 IA32\_PMCx寄存器的宽度
+# IA32_PMCx寄存器的宽度
 
 在上面的结果里，显示IA32\_PMCx寄存器的**宽度为48位**，可是这里却并**不意味着一定可以使用48位值**，有以下的情形。
 
