--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/1. MSR的使用.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/1. MSR的使用.md
@@ -1,4 +1,8 @@
-**每个MSR**都有它的**地址值**（或许称为**编号**更合适些）。**MSR的读取**使用**rdmsr指令**，**写入**使用**wrmsr指令**，由**ecx寄存器(！！！**)提供需要访问的**MSR地址值**。
+![2020-03-09-09-05-40.png](./images/2020-03-09-09-05-40.png)
+
+**每个MSR**都有它的**地址值**（或许称为**编号**更合适些）。
+
+**MSR的读取**使用**rdmsr指令**，**写入**使用**wrmsr指令**，由**ecx寄存器(！！！**)提供需要访问的**MSR地址值**。
 
 ```assembly
 mov ecx，176H   ;IA32_SYSENTER_EIP 寄存器的地址
