--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/2. MTRR.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/2. MTRR.md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-* [1 Fixed\-range区域的映射](#1-fixed-range区域的映射)
-* [2 MTRR的功能寄存器](#2-mtrr的功能寄存器)
-	* [2.1 Variable区域的定义](#21-variable区域的定义)
+- [1. 概述](#1-概述)
+- [2. Fixed-range区域的映射](#2-fixed-range区域的映射)
+- [3. MTRR的功能寄存器](#3-mtrr的功能寄存器)
+  - [3.1. Variable区域的定义](#31-variable区域的定义)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# 1. 概述
 
 先关注**MTRR（Memory Type Range Register**），MTRR的作用是**将memory物理地址划分某些区域**，并且可以**为这些区域定义不同的memory类型**，如下表所示。
 
@@ -30,7 +30,7 @@
 
 在笔者的测试结果中显示，在AMD的机器上是0000FFFF_FFFFFFFFH（即使用CPUID.EAX=80000008H返回的最大物理地址结果值不是52位）而在Intel的机器上是MAXPHYADDR值（注：这是在笔者的有限条件测试下的结论。如果您有不同的测试结果，确认无误后就以您的结论为准），在AMD中最高实现8个variable-rang区域。
 
-# 1 Fixed\-range区域的映射
+# 2. Fixed-range区域的映射
 
 Fixed区域只能定义在memory中的最低1M空间（从00000H到FFFFFH）里，由11个Fixed映射的MTRR来映射，如下表所示。
 
@@ -75,7 +75,7 @@ call dump_fixed64K_range                       ； 打印信息
 
 代码里，分两次打印Fixed-range区域的内存类型，第2次将第1个64K区域的内存类型改为00h值（也就是Uncacheable类型）。
 
-# 2 MTRR的功能寄存器
+# 3. MTRR的功能寄存器
 
 在使用MTRR前应开启MTRR功能相应的Enable位。下面的这个IA32_MTRRCAP寄存器将指示处理器支持哪些MTRR功能，如下所示。
 
@@ -95,7 +95,7 @@ bit 11是MTRR的Enable位。需要CPUID.01：EDX[12]返回1时才支持，否则
 
 Type域（bit 7到bit 0）定义Default区域的memory类型。Intel推荐这个Type设置为00H（Uncacheable）类型。
 
-## 2.1 Variable区域的定义
+## 3.1. Variable区域的定义
 
 目前有多少个Variable-range？
 
