--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
@@ -3,13 +3,13 @@
 
 <!-- code_chunk_output -->
 
-- [1. 性能事件监控机制](#1-性能事件监控机制)
+- [1. 性能监控机制: 事件监控为核心](#1-性能监控机制-事件监控为核心)
 - [2. architectural与non-architectural性能监控机制](#2-architectural与non-architectural性能监控机制)
 - [3. 确定处理器的Model](#3-确定处理器的model)
 
 <!-- /code_chunk_output -->
 
-# 1. 性能事件监控机制
+# 1. 性能监控机制: 事件监控为核心
 
 **性能监控机制**中以**事件监控机制**为**核心**，对发生的事件进行统计。
 
