--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/8. 处理器的Cache和TLB信息.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/8. 处理器的Cache和TLB信息.md
@@ -3,9 +3,11 @@
 
 <!-- code_chunk_output -->
 
-
+- [main leaf为02](#main-leaf为02)
 
 <!-- /code_chunk_output -->
+
+# main leaf为02
 
 **CPUID.EAX=02H**用来获得关于**CPU的Cache与TLB信息**。
 
