--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -3,9 +3,11 @@
 
 <!-- code_chunk_output -->
 
-
+- [main leaf: 01H](#main-leaf-01h)
 
 <!-- /code_chunk_output -->
+
+# main leaf: 01H
 
 由`CPUID.01H：EAX`可返回**处理器的家族、模型及步进信息**。
 
@@ -16,7 +18,9 @@
 - `EAX[7：4]`得到处理器**在家族中的model**。
 - `EAX[19：16]`得到**扩展的model值**。
 
-在这些处理器信息里，**最重要**的是**family与model**。由于x86处理器的庞大和混乱，在Intel文档的相关描述中，使用了family和model的配合来描述处理器的特性，例如下面的这个描述。
+在这些处理器信息里，**最重要**的是**family与model**。
+
+由于x86处理器的庞大和混乱，在Intel文档的相关描述中，使用了family和model的配合来描述处理器的特性，例如下面的这个描述。
 
 ![config](./images/7.png)
 
@@ -25,10 +29,10 @@ DisplayFamily值的计算方法如下。
 ```cpp
 if （Family == 0FH）
 {
-        DisplayFamily=ExtendedFamily + Family；
+        DisplayFamily = ExtendedFamily + Family；
 }
 else
-        DisplayFamily=Family；
+        DisplayFamily = Family；
 ```
 
 可见，只有在**Pentium4以后的处理器**才支持**ExtendedFamily编号**。
