--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/8. 处理器的Cache和TLB信息.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/8. 处理器的Cache和TLB信息.md
@@ -3,11 +3,12 @@
 
 <!-- code_chunk_output -->
 
-- [main leaf为02](#main-leaf为02)
+- [main leaf: 02H](#main-leaf-02h)
+- [main leaf: 04H](#main-leaf-04h)
 
 <!-- /code_chunk_output -->
 
-# main leaf为02
+# main leaf: 02H
 
 **CPUID.EAX=02H**用来获得关于**CPU的Cache与TLB信息**。
 
@@ -40,17 +41,19 @@ cpuid
 
 ![config](./images/22.png)
 
-处理器的**Cache和TLB**情况也可以**从CPUID.EAX=04H里获得**，04H功能号是**一个功能集**，以**ECX输入一个子叶号**，枚举出处理器**Cache的所有信息**。
+# main leaf: 04H
+
+处理器的**Cache和TLB**情况也可以从`CPUID.EAX=04H`里获得，04H功能号是**一个功能集**，以**ECX输入一个子叶号**，枚举出处理器**Cache的所有信息**。
 
 首先以**ECX=0H子叶开始查询**，在**eax寄存器返回**，我们所关心的是以下几个位域。
 
 ![config](./images/23.png)
 
-EAX[4：0]返回**cache的类型**，分别是：1=**Data cache**，2=**Instruction cache**，3=**Unified cache**，0值是**终止标志**，表示已经没有子叶可以枚举了，其他值是保留的。
+`EAX[4：0]`返回**cache的类型**，分别是：1=**Data cache**，2=**Instruction cache**，3=**Unified cache**，0值是**终止标志**，表示已经没有子叶可以枚举了，其他值是保留的。
 
-EAX[7：5]返回**cache的level(！！！**)，EAX[31：26]域里也可以查询得到**处理器的core数**，这个查询结果值需要**加上1**才是真正的值。
+`EAX[7：5]`返回**cache的level(！！！**)，`EAX[31：26]`域里也可以查询得到**处理器的core数**，这个查询结果值需要**加上1**才是真正的值。
 
-接下来EBX寄存器的返回信息是：EBX[11：00]是**line size**，EBX[21：12]是**physical line partition**，EBX[31：22]返回**cache的way数**。最后ECX寄存器返回32位的**cache set数量**。
+接下来EBX寄存器的返回信息是：`EBX[11：00]`是**line size**，`EBX[21：12]`是**physical line partition**，`EBX[31：22]`返回**cache的way数**。最后ECX寄存器返回32位的**cache set数量**。
 
 >实验4-7：使用CPUID.EAX=04H/ECX=n来查看cache及TLB信息
 
