--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -4,6 +4,9 @@
 <!-- code_chunk_output -->
 
 - [main leaf: 01H](#main-leaf-01h)
+- [family与model](#family与model)
+  - [DisplayFamily](#displayfamily)
+  - [DisplayModel](#displaymodel)
 
 <!-- /code_chunk_output -->
 
@@ -18,11 +21,15 @@
 - `EAX[7：4]`得到处理器**在家族中的model**。
 - `EAX[19：16]`得到**扩展的model值**。
 
+# family与model
+
 在这些处理器信息里，**最重要**的是**family与model**。
 
 由于x86处理器的庞大和混乱，在Intel文档的相关描述中，使用了family和model的配合来描述处理器的特性，例如下面的这个描述。
 
 ![config](./images/7.png)
+
+## DisplayFamily
 
 DisplayFamily值的计算方法如下。
 
@@ -37,22 +44,24 @@ else
 
 可见，只有在**Pentium4以后的处理器**才支持**ExtendedFamily编号**。
 
+## DisplayModel
+
 DisplayModel值的计算方法如下。
 
-```c
+```cpp
 if （Family == 06H || Family == 0FH）
 {
-        DisplayModel=ExtendedModel << 4 + Model；
+        DisplayModel = ExtendedModel << 4 + Model；
 }
 else
-        DisplayModel=Model；
+        DisplayModel = Model；
 ```
 
 现在我们可以做个实验。
 
 >实验4-4：获得处理器的DisplayFamily与DisplayModel
 
-实验的完整源码在topic04\ex4-4\setup.asm文件里，调用了lib\lib16.asm文件里面的get\_DisplayFamily\_DisplayModel()过程来获得**DisplayFamily**和**DisplayModel值**，下面是运行结果。
+实验的完整源码在`topic04\ex4-4\setup.asm`文件里，调用了`lib\lib16.asm`文件里面的`get_DisplayFamily_DisplayModel()`过程来获得**DisplayFamily**和**DisplayModel值**，下面是运行结果。
 
 ![config](./images/8.png)
 
