--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -71,4 +71,6 @@ else
 
 它的**ExtendedModel值是0010B**，**Model值是0101B**，组合起来是：**25H**。那么这个处理器模型将被描述为：**06\_25H**。这种**DisplayFamily\_DisplayModel的模型**相当重要，在Intel手册的描述中**使用这种方式**来**区别处理器的模型**。
 
+注: 参见手册 Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel
+
 在**Intel**的机器上，**06H家族**和**0FH家族**是两大派系，0FH家族典型地是指Pentium4处理器系列。而06H家族很庞大，从早期的Pentium Pro、PentiumII到今天的Westmere/SandyBridge微架构的i7/i5/i3处理器都属于06H家族。在如此庞大的06H家族，要靠它的DisplayModel来识别每一代架构的处理器。05H家族则属于Pentium处理器。
