--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -3,14 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [main leaf: 01H](#main-leaf-01h)
-- [family与model](#family与model)
-  - [DisplayFamily](#displayfamily)
-  - [DisplayModel](#displaymodel)
+- [1. main leaf: 01H](#1-main-leaf-01h)
+- [2. family与model](#2-family与model)
+  - [2.1. DisplayFamily](#21-displayfamily)
+  - [2.2. DisplayModel](#22-displaymodel)
+- [3. 简单的实验](#3-简单的实验)
+- [4. Intel家族](#4-intel家族)
 
 <!-- /code_chunk_output -->
 
-# main leaf: 01H
+# 1. main leaf: 01H
 
 由`CPUID.01H：EAX`可返回**处理器的家族、模型及步进信息**。
 
@@ -21,7 +23,7 @@
 - `EAX[7：4]`得到处理器**在家族中的model**。
 - `EAX[19：16]`得到**扩展的model值**。
 
-# family与model
+# 2. family与model
 
 在这些处理器信息里，**最重要**的是**family与model**。
 
@@ -29,7 +31,7 @@
 
 ![config](./images/7.png)
 
-## DisplayFamily
+## 2.1. DisplayFamily
 
 DisplayFamily值的计算方法如下。
 
@@ -44,7 +46,7 @@ else
 
 可见，只有在**Pentium4以后的处理器**才支持**ExtendedFamily编号**。
 
-## DisplayModel
+## 2.2. DisplayModel
 
 DisplayModel值的计算方法如下。
 
@@ -56,6 +58,8 @@ if （Family == 06H || Family == 0FH）
 else
         DisplayModel = Model；
 ```
+
+# 3. 简单的实验
 
 现在我们可以做个实验。
 
@@ -73,4 +77,12 @@ else
 
 注: 参见手册 Table 2-1. CPUID Signature Values of DisplayFamily_DisplayModel
 
-在**Intel**的机器上，**06H家族**和**0FH家族**是两大派系，0FH家族典型地是指Pentium4处理器系列。而06H家族很庞大，从早期的Pentium Pro、PentiumII到今天的Westmere/SandyBridge微架构的i7/i5/i3处理器都属于06H家族。在如此庞大的06H家族，要靠它的DisplayModel来识别每一代架构的处理器。05H家族则属于Pentium处理器。
+# 4. Intel家族
+
+在**Intel**的机器上，**06H家族**和**0FH家族**是两大派系.
+
+**0FH家族**典型地是指**Pentium4**处理器系列。
+
+而**06H家族**很庞大，从早期的Pentium Pro、PentiumII到今天的Westmere/SandyBridge微架构的i7/i5/i3处理器都属于06H家族。在如此庞大的**06H家族**，要靠它的**DisplayModel**来识别**每一代架构**的处理器。
+
+**05H家族**则属于Pentium处理器。
