--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [性能监控的多个版本](#性能监控的多个版本)
-- [确定处理器所支持的功能](#确定处理器所支持的功能)
+- [确定处理器所支持的功能: 0ah](#确定处理器所支持的功能-0ah)
 - [IA32_PMCx寄存器在各版本中的数量](#ia32_pmcx寄存器在各版本中的数量)
 - [IA32_PMCx寄存器的宽度](#ia32_pmcx寄存器的宽度)
   - [IA32_PMCx寄存器full-width值](#ia32_pmcx寄存器full-width值)
@@ -26,9 +26,16 @@ Intel64手册上介绍了**3个版本**。
 
 笔者并不肯定这三个版本是从何时开始引入，可以肯定的是版本一是由Core Sole和Core Duo处理器开始引入的。
 
-# 确定处理器所支持的功能
+# 确定处理器所支持的功能: 0ah
 
 **CPUID指令**的**0AH leaf**可以查询处理器所支持的performance monitoring机制的总体功能，`CPUID.0AH`叶返回包括下面的细节。
+
+```
+# cpuid -l 0ah -1 -r
+Disclaimer: cpuid may not support decoding of all cpuid registers.
+CPU:
+   0x00000000 0x00: eax=0x0000000f ebx=0x756e6547 ecx=0x6c65746e edx=0x49656e69
+   ```
 
 ① `EAX[7：0]`：处理器所支持performance monitoring的**版本ID**。
 
