--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -87,7 +87,9 @@ CPU:
 
 ④ 在**Core i7**处理器版本3中支持4个，即IA32\_PMC0到IA32\_PMC3。
 
-`CPUID.0A：EAX[7：0]`的值决定支持**多少个IA32\_PMCx寄存器(！！！**)，`EAX[7：0]`>3表示**最少可支持4个**，因此实际上`EAX[7：0]`=4时（如上所示）并不意味着有版本4的出现，它只是表示支持4个PMC寄存器。因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
+`CPUID.0A：EAX[7：0]`的值决定支持**多少个IA32\_PMCx寄存器(！！！**)，`EAX[7：0]`>3表示**最少可支持4个**，因此实际上`EAX[7：0]`=4时（如上所示）并**不意味**着有版本4的出现，它只是表示**支持4个PMC寄存器**。
+
+因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
 
 # IA32_PMCx寄存器的宽度
 
