--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
@@ -6,6 +6,7 @@
 - [1. leaf（叶）](#1-leaf叶)
 - [2. sub\-leaf（子叶）](#2-sub-leaf子叶)
 - [3. CPUID指令的描述形式](#3-cpuid指令的描述形式)
+- [Linux中工具](#linux中工具)
 
 <!-- /code_chunk_output -->
 
@@ -41,3 +42,7 @@ cpuid
 上面是判断处理器**是否支持PAE（Physical Address Extensions）功能**时的描述，当`CPUID.01H：EDX[6]`的值为1时，表示支持PAE功能。
 
 见Intel手册 `1.3.7 A New Syntax for CPUID, CR, and MSR Values`
+
+# Linux中工具
+
+cpuid
