--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
@@ -45,4 +45,15 @@ cpuid
 
 # Linux中工具
 
-cpuid
+```
+# rpm -qa | grep cpuid
+cpuid-20170122-6.tl2.x86_64
+# rpm -ql cpuid-20170122-6.tl2.x86_64
+/usr/bin/cpuid
+/usr/share/doc/cpuid-20170122
+/usr/share/doc/cpuid-20170122/ChangeLog
+/usr/share/doc/cpuid-20170122/FUTURE
+/usr/share/licenses/cpuid-20170122
+/usr/share/licenses/cpuid-20170122/LICENSE
+/usr/share/man/man1/cpuid.1.gz
+```
