--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/1. MSR的使用.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/1. MSR的使用.md
@@ -22,3 +22,14 @@ wrmsr
 **写入时EDX：EAX放入64位的值**，像上面的代码一样在64位下，需要将64的值拆分到EDX和EAX寄存器中。
 
 若提供的**MSR地址**是**保留或未实现**的，则执行rdmsr和wrmsr指令会**产生\#GP异常**。
+
+# Linux中工具: msr-tools
+
+```
+# rpm -qa | grep msr
+msr-tools-1.3-3.el7.x86_64
+# rpm -ql msr-tools
+/usr/sbin/msr-cpuid
+/usr/sbin/rdmsr
+/usr/sbin/wrmsr
+```
