--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -3,48 +3,50 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-	* [0.1 检测PEBS机制是否可用](#01-检测pebs机制是否可用)
-* [1 PEBS buffer](#1-pebs-buffer)
-	* [1.1 64位的PEBS记录格式](#11-64位的pebs记录格式)
-	* [1.2 增强的PEBS记录格式](#12-增强的pebs记录格式)
-	* [1.3 IA32\_PERF\_CAPABILITIES寄存器](#13-ia32_perf_capabilities寄存器)
-	* [1.4 PEBS buffer区域](#14-pebs-buffer区域)
-	* [1.5 PEBS buffer的maximum与threshold值](#15-pebs-buffer的maximum与threshold值)
-	* [1.6 PEBS reset counter值](#16-pebs-reset-counter值)
-* [2 PEBS中断](#2-pebs中断)
-	* [2.1 开启PEBS计数器](#21-开启pebs计数器)
-	* [2.3 PEBS中断的overflow标志位](#23-pebs中断的overflow标志位)
-	* [2.4 PEBS中断的抑制](#24-pebs中断的抑制)
-	* [2.5 PEBS buffer的溢出](#25-pebs-buffer的溢出)
-* [3 PEBS事件](#3-pebs事件)
-* [4 PEBS的触发](#4-pebs的触发)
-* [5 PEBS记录的报告](#5-pebs记录的报告)
-	* [5.1 值得注意](#51-值得注意)
-	* [5.2 64位的PEBS记录](#52-64位的pebs记录)
-* [6 PEBS buffer满时中断](#6-pebs-buffer满时中断)
-	* [6.1 检测中断触发条件](#61-检测中断触发条件)
-		* [6.1.1 检测PEBS中断发生](#611-检测pebs中断发生)
-		* [6.1.2 检测PEBS buffer满时中断发生](#612-检测pebs-buffer满时中断发生)
-	* [6.2 PEBS buffer满时中断优先级](#62-pebs-buffer满时中断优先级)
-* [7 多个PMI触发](#7-多个pmi触发)
-	* [7.1 counter的优先级](#71-counter的优先级)
-	* [7.2 PMI与PEBS中断](#72-pmi与pebs中断)
-		* [7.2.1 perfmon中断handler的处理](#721-perfmon中断handler的处理)
-	* [7.3 PEBS中断，PEBS buffer与BTS buffer溢出中断](#73-pebs中断pebs-buffer与bts-buffer溢出中断)
-		* [7.3.1 检测触发条件的if（）-else if（）逻辑](#731-检测触发条件的if-else-if逻辑)
-		* [7.3.2 推荐所有中断触发条件都检测处理](#732-推荐所有中断触发条件都检测处理)
-* [8 Load latency监控机制](#8-load-latency监控机制)
-	* [8.1 Load latency监控事件](#81-load-latency监控事件)
-	* [8.2 Threshold值](#82-threshold值)
-	* [8.3 开启load latency监控许可](#83-开启load-latency监控许可)
-	* [8.4 Load latency的data source信息](#84-load-latency的data-source信息)
+- [概述](#概述)
+  - [0.1 检测PEBS机制是否可用](#01-检测pebs机制是否可用)
+- [1 PEBS buffer](#1-pebs-buffer)
+  - [1.1 64位的PEBS记录格式](#11-64位的pebs记录格式)
+  - [1.2 增强的PEBS记录格式](#12-增强的pebs记录格式)
+  - [1.3 IA32\_PERF\_CAPABILITIES寄存器](#13-ia32_perf_capabilities寄存器)
+  - [1.4 PEBS buffer区域](#14-pebs-buffer区域)
+  - [1.5 PEBS buffer的maximum与threshold值](#15-pebs-buffer的maximum与threshold值)
+  - [1.6 PEBS reset counter值](#16-pebs-reset-counter值)
+- [2 PEBS中断](#2-pebs中断)
+  - [2.1 开启PEBS计数器](#21-开启pebs计数器)
+  - [2.3 PEBS中断的overflow标志位](#23-pebs中断的overflow标志位)
+  - [2.4 PEBS中断的抑制](#24-pebs中断的抑制)
+  - [2.5 PEBS buffer的溢出](#25-pebs-buffer的溢出)
+- [3 PEBS事件](#3-pebs事件)
+- [4 PEBS的触发](#4-pebs的触发)
+- [5 PEBS记录的报告](#5-pebs记录的报告)
+  - [5.1 值得注意](#51-值得注意)
+  - [5.2 64位的PEBS记录](#52-64位的pebs记录)
+- [6 PEBS buffer满时中断](#6-pebs-buffer满时中断)
+  - [6.1 检测中断触发条件](#61-检测中断触发条件)
+    - [6.1.1 检测PEBS中断发生](#611-检测pebs中断发生)
+    - [6.1.2 检测PEBS buffer满时中断发生](#612-检测pebs-buffer满时中断发生)
+  - [6.2 PEBS buffer满时中断优先级](#62-pebs-buffer满时中断优先级)
+- [7 多个PMI触发](#7-多个pmi触发)
+  - [7.1 counter的优先级](#71-counter的优先级)
+  - [7.2 PMI与PEBS中断](#72-pmi与pebs中断)
+    - [7.2.1 perfmon中断handler的处理](#721-perfmon中断handler的处理)
+  - [7.3 PEBS中断，PEBS buffer与BTS buffer溢出中断](#73-pebs中断pebs-buffer与bts-buffer溢出中断)
+    - [7.3.1 检测触发条件的if（）-else if（）逻辑](#731-检测触发条件的if-else-if逻辑)
+    - [7.3.2 推荐所有中断触发条件都检测处理](#732-推荐所有中断触发条件都检测处理)
+- [8 Load latency监控机制](#8-load-latency监控机制)
+  - [8.1 Load latency监控事件](#81-load-latency监控事件)
+  - [8.2 Threshold值](#82-threshold值)
+  - [8.3 开启load latency监控许可](#83-开启load-latency监控许可)
+  - [8.4 Load latency的data source信息](#84-load-latency的data-source信息)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# 概述
 
-PEBS直译为**基于抽样的精确事件**。开启PEBS机制允许**当发生PEBS中断时**在**内存DS存储区域**的**PEBS buffer**里**保存处理器的context环境**。
+PEBS直译为**基于抽样的精确事件**。
+
+开启PEBS机制允许**当发生PEBS中断时**在**内存DS存储区域**的**PEBS buffer**里**保存处理器的context环境**。
 
 ## 0.1 检测PEBS机制是否可用
 
