--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -3,64 +3,64 @@
 
 <!-- code_chunk_output -->
 
-- [概述](#概述)
-- [物理资源](#物理资源)
-- [counter（计数器）](#counter计数器)
-  - [IA32_PMC与IA32_FIXED_CTR寄存器](#ia32_pmc与ia32_fixed_ctr寄存器)
-  - [触发PMI](#触发pmi)
-  - [触发PEBS中断](#触发pebs中断)
-- [开启计数器](#开启计数器)
-- [全局控制器](#全局控制器)
-- [通用计数控制器](#通用计数控制器)
-  - [Event Select（bit7～bit0）](#event-selectbit7~bit0)
-  - [Unit mask（bit15～bit8）](#unit-maskbit15~bit8)
-  - [USR（bit16）](#usrbit16)
-  - [OS（bit17）](#osbit17)
-  - [E（bit18）](#ebit18)
-  - [PC（bit19）](#pcbit19)
-  - [INT（bit20）](#intbit20)
-  - [ANY（bit21）](#anybit21)
-  - [EN（bit22）](#enbit22)
-  - [INV（bit23）](#invbit23)
-  - [Counter mask（bit31～bit24）](#counter-maskbit31~bit24)
-- [固定用途计数控制器](#固定用途计数控制器)
-  - [EN域](#en域)
-  - [ANY位](#any位)
-  - [PMI位](#pmi位)
-  - [同时开启多个计数器](#同时开启多个计数器)
-- [全局状态寄存器](#全局状态寄存器)
-  - [OvfBuffer位（bit62）](#ovfbuffer位bit62)
-  - [CondChgd位（bit63）](#condchgd位bit63)
-  - [值得注意](#值得注意)
-- [全局溢出控制器](#全局溢出控制器)
-- [9 使用Performance monitoring的例子](#9-使用performance-monitoring的例子)
-  - [9.1 开启IA32\_PMC0计数器](#91-开启ia32_pmc0计数器)
-  - [9.3 收集信息](#93-收集信息)
-  - [9.4 设置PMI handler](#94-设置pmi-handler)
-  - [9.5 编写PMI handler](#95-编写pmi-handler)
-  - [9.6 清counter溢出标志位](#96-清counter溢出标志位)
-  - [9.7 设置counter溢出条件](#97-设置counter溢出条件)
-  - [9.8 设置的事件](#98-设置的事件)
-- [10 在PMI中冻结计数器](#10-在pmi中冻结计数器)
-  - [10.1 IA32\_DEUBGCTL寄存器](#101-ia32_deubgctl寄存器)
-  - [10.2 清LVT Performance monitoring寄存器mask](#102-清lvt-performance-monitoring寄存器mask)
-  - [10.3 设置IA32\_DEBUGCTL寄存器](#103-设置ia32_debugctl寄存器)
+- [1. 概述](#1-概述)
+- [2. 物理资源](#2-物理资源)
+- [3. counter（计数器）](#3-counter计数器)
+  - [3.1. IA32_PMC与IA32_FIXED_CTR寄存器](#31-ia32_pmc与ia32_fixed_ctr寄存器)
+  - [3.2. 触发PMI](#32-触发pmi)
+  - [3.3. 触发PEBS中断](#33-触发pebs中断)
+- [4. 开启计数器](#4-开启计数器)
+- [5. 全局控制器](#5-全局控制器)
+- [6. 通用计数控制器](#6-通用计数控制器)
+  - [6.1. Event Select（bit7～bit0）](#61-event-selectbit7~bit0)
+  - [6.2. Unit mask（bit15～bit8）](#62-unit-maskbit15~bit8)
+  - [6.3. USR（bit16）](#63-usrbit16)
+  - [6.4. OS（bit17）](#64-osbit17)
+  - [6.5. E（bit18）](#65-ebit18)
+  - [6.6. PC（bit19）](#66-pcbit19)
+  - [6.7. INT（bit20）](#67-intbit20)
+  - [6.8. ANY（bit21）](#68-anybit21)
+  - [6.9. EN（bit22）](#69-enbit22)
+  - [6.10. INV（bit23）](#610-invbit23)
+  - [6.11. Counter mask（bit31～bit24）](#611-counter-maskbit31~bit24)
+- [7. 固定用途计数控制器](#7-固定用途计数控制器)
+  - [7.1. EN域](#71-en域)
+  - [7.2. ANY位](#72-any位)
+  - [7.3. PMI位](#73-pmi位)
+  - [7.4. 同时开启多个计数器](#74-同时开启多个计数器)
+- [8. 全局状态寄存器](#8-全局状态寄存器)
+  - [8.1. OvfBuffer位（bit62）](#81-ovfbuffer位bit62)
+  - [8.2. CondChgd位（bit63）](#82-condchgd位bit63)
+  - [8.3. 值得注意](#83-值得注意)
+- [9. 全局溢出控制器](#9-全局溢出控制器)
+- [10. 使用Performance monitoring的例子](#10-使用performance-monitoring的例子)
+  - [10.1. 开启IA32_PMC0计数器](#101-开启ia32_pmc0计数器)
+  - [10.2. 收集信息](#102-收集信息)
+  - [10.3. 设置PMI handler](#103-设置pmi-handler)
+  - [10.4. 编写PMI handler](#104-编写pmi-handler)
+  - [10.5. 清counter溢出标志位](#105-清counter溢出标志位)
+  - [10.6. 设置counter溢出条件](#106-设置counter溢出条件)
+  - [10.7. 设置的事件](#107-设置的事件)
+- [11. 在PMI中冻结计数器](#11-在pmi中冻结计数器)
+  - [11.1. IA32_DEUBGCTL寄存器](#111-ia32_deubgctl寄存器)
+  - [11.2. 清LVT Performance monitoring寄存器mask](#112-清lvt-performance-monitoring寄存器mask)
+  - [11.3. 设置IA32_DEBUGCTL寄存器](#113-设置ia32_debugctl寄存器)
 
 <!-- /code_chunk_output -->
 
-# 概述
+# 1. 概述
 
 在这一节里，我们重点关注在**Nehalem架构**的**性能监控机制**，也适用于**后续的Westmere架构**及**SandyBridge架构**。而在**SandyBridge架构**和**IvyBridge架构**里，performance monitor机制进一步得到增强。
 
-在**Nehalem架构**下，处理器支持**版本3**的**性能监控**，从CPUID.0AH：EAX\[7：0\]返回的**ID值是4**，表明支持**4个PMC寄存器（即general\-purpose counter**）。
+在**Nehalem架构**下，处理器支持**版本3**的**性能监控**，从`CPUID.0AH：EAX[7：0]`返回的**ID值是4**，表明支持**4个PMC寄存器（即general\-purpose counter**）。
 
-# 物理资源
+# 2. 物理资源
 
 在**版本3**下，支持下面的物理资源（需要从CPUID 0A leaf里确认）。
 
 ① **4个PMC通用！！！性能监控计数器寄存器**：从IA32\_PMC0到IA32\_PMC3。
 
-② 4个**对应的PERFEVTSEL事件选择寄存器**：从IA32\_PERFEVTSEL0到IA32\_PERFEVTSEL3。
+② 4个**对应的PERFEVTSEL事件选择寄存器**：从`IA32_PERFEVTSEL0`到`IA32_PERFEVTSEL3`。
 
 ③ **3个Fixed\-function（固定用途！！！）计数器寄存器**：从IA32\_FIXED\_CTR0到IA32\_FIXED\_CTR2。
 
@@ -74,9 +74,11 @@
 
 ④ 性能监控机制的**全局溢出控制器**：IA32\_PERF\_GLOBAL\_OVF\_CTRL寄存器。
 
-在Nehalem架构下**每个PMC（通用性能监控计数器**）已经被扩展为48位（由CPUID.0AH：EAX[23：16]查询可得）。**PMC寄存器**可以用于**architectural化**的**性能监控事件(！！！**)和**非architectural化的性能监控事件(！！！**)，而**Fixed\-function的counter**仅用于**architectural的性能监控事件(！！！**)。
+在Nehalem架构下**每个PMC（通用性能监控计数器**）已经被扩展为48位（由`CPUID.0AH：EAX[23：16]`查询可得）。
 
-# counter（计数器）
+**PMC寄存器**可以用于**architectural化**的**性能监控事件(！！！**)和**非architectural化的性能监控事件(！！！**)，而**Fixed\-function的counter**仅用于**architectural的性能监控事件(！！！**)。
+
+# 3. counter（计数器）
 
 在**版本3**的性能监控机制里支持**两种counter**。
 
@@ -84,33 +86,35 @@
 
 ② Fixed\-function counter：**固定用途的性能监控计数器**。
 
-## IA32_PMC与IA32_FIXED_CTR寄存器
+## 3.1. IA32_PMC与IA32_FIXED_CTR寄存器
 
 ![config](./images/4.jpg)
 
-在Nehalem和Westmere架构中，IA32\_PMC和IA32\_FIXED\_CTR寄存器的宽度都是48位，分别由CPUID.0AH：EAX\[23：16\]和CPUID.0AH：EDX\[12：5\]中查询得到。
+在Nehalem和Westmere架构中，IA32\_PMC和IA32\_FIXED\_CTR寄存器的宽度都是48位，分别由`CPUID.0AH：EAX[23：16]`和`CPUID.0AH：EDX[12：5]`中查询得到。
 
-## 触发PMI
+## 3.2. 触发PMI
 
 **48位宽**的**IA32\_PMC！！！**和**IA32\_FIXED\_CTR！！！**寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
 
-通用计数器和固定用途计数器都支持PMI中断。
+**通用计数器**和**固定用途计数器**都支持PMI中断。
 
 当**counter溢出**后, **CPU自动(！！！**)通过**Local APIC的LVT寄存器中的LVT Performance Counter寄存器**产生**本地中断(local interrupt**), 该寄存器提供中断相关信息, 包括中断向量等, 再通过中断向量查找IDT, 从而找到代码入口.
 
 所以**软件**需要设置**LVT Performance Counter寄存器**以及**IDT中相应描述符**, **向量号是自己定义**的, 向量号定义不能使用Intel保留的, 给LVT设置时候会产生异常.
 
-## 触发PEBS中断
+## 3.3. 触发PEBS中断
 
 在Nehalem和Westmere架构下的**4个通用计数器IA32\_PMC0到IA32\_PMC3**可以设置**当计数器溢出**时**触发PEBS中断**，由**IA32\_PEBS\_ENABLE寄存器设置(！！！**)，如下所示。
 
 ![config](./images/5.jpg)
 
-触发PEBS中断的计数器**只使用在通用计数器(！！！**)上，由**IA32\_PEBS\_ENABLE寄存器**的**bit3到bit0设置**，对应于**相应的IA32\_PMCx寄存器**。**固定用途**的IA32\_FIXED\_CTR计数器**不支持PEBS中断**。
+触发PEBS中断的计数器**只使用在通用计数器(！！！**)上，由**IA32\_PEBS\_ENABLE寄存器**的**bit3到bit0设置**，对应于**相应的IA32\_PMCx寄存器**。
+
+**固定用途**的IA32\_FIXED\_CTR计数器**不支持PEBS中断**。
 
 当**PEBS\_EN\_PMCx位置位(！！！**)时，IA32\_PMCx溢出时**产生PEBS中断而不是PMI(！！！**)。
 
-# 开启计数器
+# 4. 开启计数器
 
 在**使用这些计数器之前**，需要通过**IA32\_PERF\_GLOBAL\_CTRL寄存器(！！！**)和**各自对应的控制器(！！！**)来设置开启，如下所示。
 
@@ -120,7 +124,7 @@
 
 同样，**IA32\_FIXED\_CTRx寄存器**的**开启**需要**IA32\_PERF\_GLOBAL\_CTRL寄存器**配合**IA32\_FIXED\_CTR\_CTRL寄存器的EN位**同时置位。
 
-# 全局控制器
+# 5. 全局控制器
 
 在performance monitor机制里，全局控制器IA32\_PERF\_GLOBAL\_CTRL寄存器起了**总开关的作用**。它控制着**IA32\_PMCx计数器**与**IA32\_FIXED\_CTRx计数器**的**开启**。它的结构如下所示。
 
@@ -134,53 +138,53 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 在Nehalem和Westmere架构上，这个N值是3（支持0到3号的PMC寄存器）。当这些位为0时，对应于counter（计数器）寄存器是disable（关闭）的。当这些位为1时，counter的开启**还依赖于各自的控制器**。
 
-# 通用计数控制器
+# 6. 通用计数控制器
 
 **每个IA32\_PMCx寄存器**都有**对应的一个IA32\_PERFEVTSELx寄存器**，这些寄存器控制着IA32\_PMCx寄存器**如何计数**。它的结构如下。
 
 ![config](./images/8.jpg)
 
-## Event Select（bit7～bit0）
+## 6.1. Event Select（bit7～bit0）
 
 这个8位值设置**需要监控的事件号**，这个事件可以是前面表里所列举的**预定义architectural化事件**或者是**non\-architectural化的事件(与处理器Model有关, 不同处理器model可能会不一致！！！**)。
 
-## Unit mask（bit15～bit8）
+## 6.2. Unit mask（bit15～bit8）
 
 这个域用来选择在**监控Event下的监控条件**，一个事件下会对应**多个监控条件（或子事件**），每个条件对应一个umask值。**Event select**配合**Umask域**确定**唯一的监控事件编号(！！！**)。
 
-## USR（bit16）
+## 6.3. USR（bit16）
 
 设置这个位使得处理器**仅运行在1、2或3级权限**下进行监控。
 
-## OS（bit17）
+## 6.4. OS（bit17）
 
 设置这个位使得处理器仅运行在**0级权限**下进行监控。
 
-## E（bit18）
+## 6.5. E（bit18）
 
 当设置这个位时，允许处理器对**监控事件进行计数**基于**edge触发模式（从断开到接通**）。
 
-## PC（bit19）
+## 6.6. PC（bit19）
 
 置位时，当被监控的事件发生，处理器增加计数时进行toggle（拴紧）PMi pin的操作。为0时，在事件counter（计数器）发生溢出时进行拴紧PMi pin操作。
 
-## INT（bit20）
+## 6.7. INT（bit20）
 
 当**置位**时，发生**counter溢出**时产生**local APIC**的**Performance monitor counter中断(！！！**)。
 
-## ANY（bit21）
+## 6.8. ANY（bit21）
 
 这个位的设置，允许**发生事件后**共享**一个processor core**的**所有logical processor进行计数**。为0时，仅在**相应的logical processor进行计数**（关于multi\-threading的内容，请参考18.4.2节）。
 
-## EN（bit22）
+## 6.9. EN（bit22）
 
 为1时，**开启事件监控的计数器**，为0时关闭计数器。
 
-## INV（bit23）
+## 6.10. INV（bit23）
 
 为1时，**使用相反的counter mask条件**。
 
-## Counter mask（bit31～bit24）
+## 6.11. Counter mask（bit31～bit24）
 
 计数**条件域**，当这个域不为0时（设置一个条件值），当**事件发生的次数大于等于这个条件值**时，counter（计数器）加1，否则不增加。
 
@@ -205,7 +209,7 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 这个**Event select值为C0H**，**umask为00H**，这是**指令执行完毕退出的事件**（也就是**监控执行了多少条指令**）。
 
-# 固定用途计数控制器
+# 7. 固定用途计数控制器
 
 **3个fixed\-function计数器**IA32\_FIXED\_CTR0到IA32\_FIXED\_CTR2的开启还需要**各自对应的IA32\_FIXED\_CTR\_CTRL寄存器来控制**，如下所示。
 
@@ -219,15 +223,15 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 ③ bit11到bit8：控制IA32\_FIXED\_CTR2寄存器。
 
-## EN域
+## 7.1. EN域
 
 **EN域为0**时，**关闭**Fixed\-function计数器。EN域为**1**时，当**监控事件**发生在**0级**权限时，**counter加1**。EN域为**2**时，当**监控事件**发生在**1、2及3权限**时，counter加1。EN域为**3**时，发生监控事件，counter加1（也就是**CPL被忽略**）。
 
-## ANY位
+## 7.2. ANY位
 
 ANY置位时，当**发生符合的监控事件**时，共享**同一个processor core**的**所有logical processor**的**counter加1**。否则**只在一个logical processor**上的counter加1。
 
-## PMI位
+## 7.3. PMI位
 
 PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor interrupt**），这个中断由**local APIC**的**LVT Performance counter寄存器设置(！！！**)。
 
@@ -248,7 +252,7 @@ PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor
 
 置IA32\_PERF\_GLOBAL\_CTRL寄存器的bit32位（edx\[0\]），以及IA32\_FIXED\_CTR\_CTRL寄存器的bit4位（IA32\_FIXED\_CTR0的enable位）。
 
-## 同时开启多个计数器
+## 7.4. 同时开启多个计数器
 
 利用**IA32\_PERF\_GLOBAL\_CTRL寄存器的总开关**的特色，可以同时**开启多个计数器**，如下代码是**同时开启IA32\_PMC0**与**IA32\_FIXED\_CTR0**的示例。
 
@@ -273,7 +277,7 @@ PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor
 
 这样做的前提条件是IA32\_PERF\_GLOBAL\_CTR寄存器在初始化时全被清0（关闭所有计数器）。否则在每个计数器控制器设置时已经开启计数了。
 
-# 全局状态寄存器
+# 8. 全局状态寄存器
 
 IA32\_PERF\_GLOBAL\_STATUS寄存器能反映**所有counter的状态（是否溢出**），如下所示。
 
@@ -281,13 +285,13 @@ IA32\_PERF\_GLOBAL\_STATUS寄存器能反映**所有counter的状态（是否溢
 
 IA32\_PERF\_GLOBAL\_STATUS寄存器的**每一位为1**时，指示对应的counter产生了溢出。这个寄存器还有两个额外的位。
 
-## OvfBuffer位（bit62）
+## 8.1. OvfBuffer位（bit62）
 
 当**开启PEBS（Precise Event Based Sampling**）机制时，由**counter溢出**而**触发PEBS中断**，处理器在**DS区域**的**PEBS buffer**写入**PEBS记录**。DS区域的PEBS buffer溢出时OvfBuffer标志位将会被置位（关于PEBS buffer另参考14.9节BTS机制的相关描述）。
 
 例如：在IA32\_PEBS\_ENABLE[0]=1时，IA32\_PMC0发生溢出则会产生PEBS中断，如果PEBS buffer产生溢出会使OvfBuffer位被置位，而IA32\_PMC0 Overflow位则被清位。
 
-## CondChgd位（bit63）
+## 8.2. CondChgd位（bit63）
 
 这个位为1时，指示性能监控的状态已经被改变。
 
@@ -299,11 +303,11 @@ IA32\_PERF\_GLOBAL\_STATUS寄存器的**每一位为1**时，指示对应的coun
 
 ② 当OvfBuffer标志置位，则表示由于PEBS buffer溢出而产生DS中断。
 
-## 值得注意
+## 8.3. 值得注意
 
 IA32\_PERF\_GLOBAL\_STATUS是只读寄存器，处理器从不会清这些标志位，溢出标志的清位是软件的职责。
 
-# 全局溢出控制器
+# 9. 全局溢出控制器
 
 当发生**counter溢出**进入**PMI**后，软件可以使用**IA32\_PERF\_GLOBAL\_OVF\_CTRL（全局溢出控制器**）寄存器来**清理这些溢出标志**。
 
@@ -328,7 +332,7 @@ wrmsr
 
 ③ 关闭counter，停止监控或抽样（PEBS）。
 
-# 9 使用Performance monitoring的例子
+# 10. 使用Performance monitoring的例子
 
 我们已经对Intel的性能监控机制有了初步的认识，这里我们将有**两个实验**。
 
@@ -354,7 +358,7 @@ Foo：
 
 这个测试函数只是用来简单地打印一条信息。
 
-## 9.1 开启IA32\_PMC0计数器
+## 10.1. 开启IA32_PMC0计数器
 
 我们需要对**IA32\_PERF\_GLOBAL\_CTRL**寄存器和**IA32\_PERFEVTSEL0**寄存器进行设置。
 
@@ -378,7 +382,7 @@ Foo：
 
 当对IA32\_PERFEVTSEL0寄存器**执行完WRMSR指令**后，事件监控将**立即生效**。
 
-## 9.3 收集信息
+## 10.2. 收集信息
 
 接下来，我们就调用测试的函数。
 
@@ -427,7 +431,7 @@ Next at t=156693773
 
 下面，我们来进行另一个实验测试，我们需要人为地使counter产生溢出，从而调用PMI handler。
 
-## 9.4 设置PMI handler
+## 10.3. 设置PMI handler
 
 我们需要对PMI的中断服务例程进行设置，如下。
 
@@ -443,7 +447,7 @@ Next at t=156693773
 
 **与一般的中断服务例程设置是相同**的，使用**set\_interrupt\_handler()函数**在**IDT**里设置**相应的interrupt描述符！！！**（这个set\_interrupt\_handler()函数实现在**lib\lib32.asm库代码**里）。
 
-## 9.5 编写PMI handler
+## 10.4. 编写PMI handler
 
 当然，我们需要编写对应的中断服务例程，下面是这个实验里使用的PMI handler代码。
 
@@ -484,7 +488,7 @@ do_perfmon_handler_done：
 
 dump\_perfmon（）函数实现在lib\perfmon.asm文件里。关于local APIC的知识，请参考第18章。
 
-## 9.6 清counter溢出标志位
+## 10.5. 清counter溢出标志位
 
 当发生counter溢出产生PMI时，在PMI handler里一项重要的工作是需要清计数器相对应的溢出标志位，在实验15\-3中的PMI handler使用宏RESET\_COUNTER\_OVERFLOW来清位。
 
@@ -506,7 +510,7 @@ dump\_perfmon（）函数实现在lib\perfmon.asm文件里。关于local APIC的
 
 这个宏定义在inc\perfmon.inc头文件里，将清IA32\_PERF\_GLOBAL\_STATUS寄存器的所有溢出标志位，通过向IA32\_PERF\_GLOBAL\_OVF\_CTRL寄存器的相应位写入1值来达到。
 
-## 9.7 设置counter溢出条件
+## 10.6. 设置counter溢出条件
 
 在实验设置里，我们可以通过对**IA32\_PMC0计数器**写入**最大值**来达到****快速触发PMI****的目的，这个写入最大值通过调用write\_counter\_maximum（）函数来实现。
 
@@ -547,7 +551,7 @@ wrmsr
 
 当**写入这个最大值**后，后续的**任何一条指令执行完毕后都会产生counter的溢出**（当然需要在开启counter后）。
 
-## 9.8 设置的事件
+## 10.7. 设置的事件
 
 在这个实验里，我们还是使用和实验15\-2相同的监控事件，同样使用IA32\_PMC0计数器。
 
@@ -565,7 +569,7 @@ wrmsr
 
 ③ 由于我们在PMI handler里对溢出标志进行了清位工作（见代码清单15-5），因此在退出打印时，IA32\_PERF\_GLOBAL\_STATUS寄存器已经被清位。现在，通过上面两个实验，我们基本了解了性能监控中的运作情况。
 
-# 10 在PMI中冻结计数器
+# 11. 在PMI中冻结计数器
 
 在**正常情况**下，当**counter产生溢出**，在**开启PMI enable位**时处理器转去执行PMI中断handler，那么在**PMI handler里(！！！执行PMI handler过程中也是一直在计数！！！**)，counter会继续**不断地计数**，除非关闭counter。
 
@@ -585,7 +589,7 @@ pmi_handler（）  /* 进入 PMI handler */
 
 当处理器检测到**IA32\_DEUBGCTL寄存器的bit 12置位**时，将清IA32\_PERF\_GLOBAL\_CTRL为0值（包括通用和固定用途的counter全部关闭）。
 
-## 10.1 IA32\_DEUBGCTL寄存器
+## 11.1. IA32_DEUBGCTL寄存器
 
 在**IA32\_DEBUGCTL**寄存器提供了一个**控制位实现PMI handler冻结计数**，如下所示。
 
@@ -633,7 +637,7 @@ do_perfmon_handler_done：
 
 为了更好地观察，在这个PMI handler里将做一些修改，分别打印两次PMC寄存器的值，中间还调用函数进行测试。
 
-## 10.2 清LVT Performance monitoring寄存器mask
+## 11.2. 清LVT Performance monitoring寄存器mask
 
 当**产生PMI**时，处理器会**自动将 LVT Perfmon寄存器的mask置位**，从而**屏蔽PMI**产生。因此在**第1次PMI执行完**毕后，我们可以在**PMI handler退出前清LVT perfmon寄存器的mask位**，重新开启允许PMI handler被调用。
 
@@ -643,7 +647,7 @@ btr DWORD [APIC_BASE + LVT_PERFMON]，16  ； 清 LVT perfmon寄存器mask位
 
 local APIC的LVT perfmon寄存器bit 16位是mask位，通过清0，取消PMI handler的屏蔽。
 
-## 10.3 设置IA32\_DEBUGCTL寄存器
+## 11.3. 设置IA32_DEBUGCTL寄存器
 
 接着，将IA32\_DEBUGCTL寄存器的bit 12位置位，开启PMI冻结counter机制。
 
