--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -5,7 +5,8 @@
 
 - [性能监控的多个版本](#性能监控的多个版本)
 - [确定处理器所支持的功能: 0ah](#确定处理器所支持的功能-0ah)
-- [IA32_PMCx寄存器在各版本中的数量](#ia32_pmcx寄存器在各版本中的数量)
+  - [简单实验](#简单实验)
+- [IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器](#ia32_pmcx寄存器在各版本中的数量-general-purpose-counter寄存器)
 - [IA32_PMCx寄存器的宽度](#ia32_pmcx寄存器的宽度)
   - [IA32_PMCx寄存器full-width值](#ia32_pmcx寄存器full-width值)
 - [预定义的event](#预定义的event)
@@ -53,6 +54,8 @@ CPU:
 
 其中`EAX[15：8]`得到`IA32_PMCx`寄存器的数量，也意味着**IA32\_PERFEVTSELx寄存器的数量**，它们是**配套出现**的。CPUID 0AH leaf的具体信息可以查看Intel64手册中关于CPUID指令的介绍。
 
+## 简单实验
+
 >实验15-1：枚举CPUID 0A leaf信息
 
 在继续往下之前，我们先来确定处理器的以上信息，在这个实验里使用CPUID 0A leaf来输出上述的这些信息。
@@ -69,7 +72,7 @@ CPU:
 
 下面还打印出所支持的**7个event**数量，其中reference cycle event是不可用的，这些事件是**pre\-defined（预定义**）architectural化的event。
 
-# IA32_PMCx寄存器在各版本中的数量
+# IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器
 
 在Intel64手册的**MSR寄存器表**中列举了architectural化的数个IA32\_PMCx寄存器，它们所需要支持的条件如下。
 
@@ -107,7 +110,11 @@ CPU:
 
 - 当`IA32_PERF_CAPABILITIES[13]`=1时，才可以写入full\-width宽度的值（如本例中的48位宽度）。
 
-IA32\_PERF\_CAPABILITIES寄存器的bit 13位是FW\_WRITE（full\-width write）标志位。由于IA32\_PREF\_CAPABILITIES寄存器是只读（only\-read）寄存器，因此最终可写入的宽度由这个FW\_WRITE位来决定。在Sandy Bridge之前的微架构（包括Westmere架构）并不支持full\-width写入（即FW_WRITE位为0值）。
+IA32\_PERF\_CAPABILITIES寄存器的bit 13位是FW\_WRITE（full\-width write）标志位。
+
+由于IA32\_PREF\_CAPABILITIES寄存器是只读（only\-read）寄存器，因此最终可写入的宽度由这个FW\_WRITE位来决定。
+
+在Sandy Bridge之前的微架构（包括Westmere架构）并不支持full\-width写入（即FW_WRITE位为0值）。
 
 当`IA32_PERF_CAPABILITIES[13]`=1时（以full\-width是48为例）。
 
