--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -3,17 +3,17 @@
 
 <!-- code_chunk_output -->
 
-- [性能监控的多个版本](#性能监控的多个版本)
-- [确定处理器所支持的功能: 0ah](#确定处理器所支持的功能-0ah)
-  - [简单实验](#简单实验)
-- [IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器](#ia32_pmcx寄存器在各版本中的数量-general-purpose-counter寄存器)
-- [IA32_PMCx寄存器的宽度](#ia32_pmcx寄存器的宽度)
-  - [IA32_PMCx寄存器full-width值](#ia32_pmcx寄存器full-width值)
-- [预定义的event](#预定义的event)
+- [1. 性能监控的多个版本](#1-性能监控的多个版本)
+- [2. 确定处理器所支持的功能: 0ah](#2-确定处理器所支持的功能-0ah)
+  - [2.1. 简单实验](#21-简单实验)
+- [3. IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器](#3-ia32_pmcx寄存器在各版本中的数量-general-purpose-counter寄存器)
+- [4. IA32_PMCx寄存器的宽度](#4-ia32_pmcx寄存器的宽度)
+  - [4.1. IA32_PMCx寄存器full-width值](#41-ia32_pmcx寄存器full-width值)
+- [5. 预定义的event](#5-预定义的event)
 
 <!-- /code_chunk_output -->
 
-# 性能监控的多个版本
+# 1. 性能监控的多个版本
 
 在**architectural化**的**性能监控机制**中，由于后续的处理器得到增强。因此产生了**数个版本**的**performance monitoring机制**。
 
@@ -27,7 +27,7 @@ Intel64手册上介绍了**3个版本**。
 
 笔者并不肯定这三个版本是从何时开始引入，可以肯定的是版本一是由Core Sole和Core Duo处理器开始引入的。
 
-# 确定处理器所支持的功能: 0ah
+# 2. 确定处理器所支持的功能: 0ah
 
 **CPUID指令**的**0AH leaf**可以查询处理器所支持的performance monitoring机制的总体功能，`CPUID.0AH`叶返回包括下面的细节。
 
@@ -54,7 +54,7 @@ CPU:
 
 其中`EAX[15：8]`得到`IA32_PMCx`寄存器的数量，也意味着**IA32\_PERFEVTSELx寄存器的数量**，它们是**配套出现**的。CPUID 0AH leaf的具体信息可以查看Intel64手册中关于CPUID指令的介绍。
 
-## 简单实验
+## 2.1. 简单实验
 
 >实验15-1：枚举CPUID 0A leaf信息
 
@@ -72,7 +72,7 @@ CPU:
 
 下面还打印出所支持的**7个event**数量，其中reference cycle event是不可用的，这些事件是**pre\-defined（预定义**）architectural化的event。
 
-# IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器
+# 3. IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器
 
 在Intel64手册的**MSR寄存器表**中列举了architectural化的数个IA32\_PMCx寄存器，它们所需要支持的条件如下。
 
@@ -94,7 +94,7 @@ CPU:
 
 因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
 
-# IA32_PMCx寄存器的宽度
+# 4. IA32_PMCx寄存器的宽度
 
 在上面的结果里，显示`IA32_PMCx`寄存器的**宽度为48位**，可是这里却并**不意味着一定可以使用48位值**，有以下的情形。
 
@@ -104,7 +104,7 @@ CPU:
 
 这个full\-width就是从`CPUID.0AH：EAX[23：16]`里获得的值，在本例里是48位值。
 
-## IA32_PMCx寄存器full-width值
+## 4.1. IA32_PMCx寄存器full-width值
 
 虽然在`CPUID.0AH：EAX[23：16]`获得的值显示IA32\_PMC寄存器支持**48位**的宽度，然而Intel明确指出：
 
@@ -130,9 +130,11 @@ IA32\_PERF\_CAPABILITIES寄存器的bit 13位是FW\_WRITE（full\-width write）
 
 当`IA32_PERF_CAPABILITIES[13]`=1时，软件也可以写入IA32\_PMCx寄存器的full\-width值的别名寄存器IA32\_A\_PMCx（地址从4C1H开始），关于IA32\_PERF\_CAPABILITIES寄存器的结构请看14.4.1节。
 
-# 预定义的event
+# 5. 预定义的event
 
-从`CPUID.0AH：EAX[31：24]`获得所支持的**pre\-defined(预定义**)的**architectural（架构化的）event数量**。**每个事件**对应于`EBX[6：0]`域的**每个位**，因此可以从EBX低7位查询到预定义的event对于处理器是否available（可用）。
+从`CPUID.0AH：EAX[31：24]`获得所支持的**pre\-defined(预定义**)的**architectural（架构化的）event数量**。
+
+**每个事件**对应于`EBX[6：0]`域的**每个位**，因此可以从EBX低7位查询到预定义的event对于处理器是否available（可用）。
 
 在上面的运行结果中，可看到在笔者的Westmere微架构Core i5移动处理器**reference cycle event是无效**的。
 
