--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -42,11 +42,11 @@ CPU:
 
 ② `EAX[15：8]`：**每个logical processor（逻辑处理器！！！**）包含**general\-purpose counter寄存器的数量**，也就是有多少个**IA32\_PMCx寄存器(！！！**)。
 
-③ `EAX[23：16]`：**general\-purpose counter寄存器**的**有效宽度**。
+③ `EAX[23：16]`：**general\-purpose counter寄存器**的**有效宽度**。**通用监控计数器**.
 
 ④ `EAX[31：24]`：所支持的**预定义的event的数量！！！**（见后面的15.2.4节描述）。
 
-⑤ `EDX[4：0]`：所支持的**fixed\-function counter寄存器**的**数量**。
+⑤ `EDX[4：0]`：所支持的**fixed\-function counter寄存器**的**数量**。**固定用途计数器**.
 
 ⑥ `EDX[12：5]`：**fixed\-function counter寄存器**的**有效宽度**。
 
