--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -6,12 +6,16 @@
 - [1. 概述](#1-概述)
 - [2. 物理资源](#2-物理资源)
 - [3. counter（计数器）](#3-counter计数器)
-  - [3.1. IA32_PMC与IA32_FIXED_CTR寄存器](#31-ia32_pmc与ia32_fixed_ctr寄存器)
-  - [3.2. 触发PMI](#32-触发pmi)
-  - [3.3. 触发PEBS中断](#33-触发pebs中断)
+  - [3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器](#31-ia32_pmcx与ia32_fixed_ctrx寄存器)
+  - [3.2. 触发PMI: 通用和固定达到最大数溢出](#32-触发pmi-通用和固定达到最大数溢出)
+  - [3.3. 触发PEBS中断: 通用计数器](#33-触发pebs中断-通用计数器)
 - [4. 开启计数器](#4-开启计数器)
+  - [4.1. 全局控制器](#41-全局控制器)
+  - [4.2. 计数器对应的控制器](#42-计数器对应的控制器)
+    - [4.2.1. 通用计数器控制器(其实是事件选择寄存器)](#421-通用计数器控制器其实是事件选择寄存器)
+    - [4.2.2. 固定用途计数器控制器](#422-固定用途计数器控制器)
 - [5. 全局控制器](#5-全局控制器)
-- [6. 通用计数控制器](#6-通用计数控制器)
+- [6. 通用计数控制器(其实是事件选择寄存器)](#6-通用计数控制器其实是事件选择寄存器)
   - [6.1. Event Select（bit7～bit0）](#61-event-selectbit7~bit0)
   - [6.2. Unit mask（bit15～bit8）](#62-unit-maskbit15~bit8)
   - [6.3. USR（bit16）](#63-usrbit16)
@@ -23,6 +27,7 @@
   - [6.9. EN（bit22）](#69-enbit22)
   - [6.10. INV（bit23）](#610-invbit23)
   - [6.11. Counter mask（bit31～bit24）](#611-counter-maskbit31~bit24)
+  - [启用通用计数器](#启用通用计数器)
 - [7. 固定用途计数控制器](#7-固定用途计数控制器)
   - [7.1. EN域](#71-en域)
   - [7.2. ANY位](#72-any位)
@@ -86,13 +91,13 @@
 
 ② Fixed\-function counter：**固定用途的性能监控计数器**。
 
-## 3.1. IA32_PMC与IA32_FIXED_CTR寄存器
+## 3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器
 
 ![config](./images/4.jpg)
 
 在Nehalem和Westmere架构中，IA32\_PMC和IA32\_FIXED\_CTR寄存器的宽度都是48位，分别由`CPUID.0AH：EAX[23：16]`和`CPUID.0AH：EDX[12：5]`中查询得到。
 
-## 3.2. 触发PMI
+## 3.2. 触发PMI: 通用和固定达到最大数溢出
 
 **48位宽**的**IA32\_PMC！！！**和**IA32\_FIXED\_CTR！！！**寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
 
@@ -102,7 +107,7 @@
 
 所以**软件**需要设置**LVT Performance Counter寄存器**以及**IDT中相应描述符**, **向量号是自己定义**的, 向量号定义不能使用Intel保留的, 给LVT设置时候会产生异常.
 
-## 3.3. 触发PEBS中断
+## 3.3. 触发PEBS中断: 通用计数器
 
 在Nehalem和Westmere架构下的**4个通用计数器IA32\_PMC0到IA32\_PMC3**可以设置**当计数器溢出**时**触发PEBS中断**，由**IA32\_PEBS\_ENABLE寄存器设置(！！！**)，如下所示。
 
@@ -120,7 +125,17 @@
 
 ![config](./images/6.jpg)
 
-**IA32\_PERF\_GLOBAL\_CTRL**寄存器是性能监控机制的**全局总控制器**。**IA32\_PMC计数器**的开启需**IA32\_PERF\_GLOBAL\_CTRL**配合**IA32\_PERFEVTSELx寄存器(事件选择寄存器！！！**)的**EN位（bit 22**）同时置位。
+## 4.1. 全局控制器
+
+**IA32\_PERF\_GLOBAL\_CTRL**寄存器是性能监控机制的**全局总控制器**。
+
+## 4.2. 计数器对应的控制器
+
+### 4.2.1. 通用计数器控制器(其实是事件选择寄存器)
+
+**IA32\_PMC计数器**的开启需**IA32\_PERF\_GLOBAL\_CTRL**配合**IA32\_PERFEVTSELx寄存器(事件选择寄存器！！！**)的**EN位（bit 22**）同时置位。
+
+### 4.2.2. 固定用途计数器控制器
 
 同样，**IA32\_FIXED\_CTRx寄存器**的**开启**需要**IA32\_PERF\_GLOBAL\_CTRL寄存器**配合**IA32\_FIXED\_CTR\_CTRL寄存器的EN位**同时置位。
 
@@ -138,7 +153,7 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 在Nehalem和Westmere架构上，这个N值是3（支持0到3号的PMC寄存器）。当这些位为0时，对应于counter（计数器）寄存器是disable（关闭）的。当这些位为1时，counter的开启**还依赖于各自的控制器**。
 
-# 6. 通用计数控制器
+# 6. 通用计数控制器(其实是事件选择寄存器)
 
 **每个IA32\_PMCx寄存器**都有**对应的一个IA32\_PERFEVTSELx寄存器**，这些寄存器控制着IA32\_PMCx寄存器**如何计数**。它的结构如下。
 
@@ -187,6 +202,8 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 ## 6.11. Counter mask（bit31～bit24）
 
 计数**条件域**，当这个域不为0时（设置一个条件值），当**事件发生的次数大于等于这个条件值**时，counter（计数器）加1，否则不增加。
+
+## 启用通用计数器
 
 当我们需要开启IA32\_PMC0寄存器时，如下面的代码所示。
 
