--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -7,7 +7,7 @@
 - [2. 物理资源](#2-物理资源)
 - [3. counter（计数器）](#3-counter计数器)
   - [3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器](#31-ia32_pmcx与ia32_fixed_ctrx寄存器)
-  - [3.2. 触发PMI: 通用和固定达到最大数溢出](#32-触发pmi-通用和固定达到最大数溢出)
+  - [3.2. 触发PMI: 通用和固定](#32-触发pmi-通用和固定)
   - [3.3. 触发PEBS中断: 通用计数器](#33-触发pebs中断-通用计数器)
 - [4. 开启计数器](#4-开启计数器)
   - [4.1. 全局控制器](#41-全局控制器)
@@ -27,11 +27,12 @@
   - [6.9. EN（bit22）](#69-enbit22)
   - [6.10. INV（bit23）](#610-invbit23)
   - [6.11. Counter mask（bit31～bit24）](#611-counter-maskbit31~bit24)
-  - [启用通用计数器](#启用通用计数器)
+  - [6.12. 启用通用计数器代码](#612-启用通用计数器代码)
 - [7. 固定用途计数控制器](#7-固定用途计数控制器)
   - [7.1. EN域](#71-en域)
   - [7.2. ANY位](#72-any位)
   - [7.3. PMI位](#73-pmi位)
+  - [启用固定用途计数器代码](#启用固定用途计数器代码)
   - [7.4. 同时开启多个计数器](#74-同时开启多个计数器)
 - [8. 全局状态寄存器](#8-全局状态寄存器)
   - [8.1. OvfBuffer位（bit62）](#81-ovfbuffer位bit62)
@@ -97,7 +98,7 @@
 
 在Nehalem和Westmere架构中，IA32\_PMC和IA32\_FIXED\_CTR寄存器的宽度都是48位，分别由`CPUID.0AH：EAX[23：16]`和`CPUID.0AH：EDX[12：5]`中查询得到。
 
-## 3.2. 触发PMI: 通用和固定达到最大数溢出
+## 3.2. 触发PMI: 通用和固定
 
 **48位宽**的**IA32\_PMC！！！**和**IA32\_FIXED\_CTR！！！**寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
 
@@ -203,7 +204,7 @@ IA32\_PERF\_GLOBAL_CTRL寄存器中的**每一位都是enable位**。
 
 计数**条件域**，当这个域不为0时（设置一个条件值），当**事件发生的次数大于等于这个条件值**时，counter（计数器）加1，否则不增加。
 
-## 启用通用计数器
+## 6.12. 启用通用计数器代码
 
 当我们需要开启IA32\_PMC0寄存器时，如下面的代码所示。
 
@@ -252,6 +253,8 @@ ANY置位时，当**发生符合的监控事件**时，共享**同一个processo
 
 PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor interrupt**），这个中断由**local APIC**的**LVT Performance counter寄存器设置(！！！**)。
 
+## 启用固定用途计数器代码
+
 当我们需要开启IA32\_FIXED\_CTR0寄存器时，如下面代码所示。
 
 ```assembly
@@ -267,7 +270,7 @@ PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor
        wrmsr
 ```
 
-置IA32\_PERF\_GLOBAL\_CTRL寄存器的bit32位（edx\[0\]），以及IA32\_FIXED\_CTR\_CTRL寄存器的bit4位（IA32\_FIXED\_CTR0的enable位）。
+置IA32\_PERF\_GLOBAL\_CTRL寄存器的bit32位（`edx[0]`），以及IA32\_FIXED\_CTR\_CTRL寄存器的bit4位（IA32\_FIXED\_CTR0的enable位）。
 
 ## 7.4. 同时开启多个计数器
 
