--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -32,8 +32,8 @@
   - [7.1. EN域](#71-en域)
   - [7.2. ANY位](#72-any位)
   - [7.3. PMI位](#73-pmi位)
-  - [启用固定用途计数器代码](#启用固定用途计数器代码)
-  - [7.4. 同时开启多个计数器](#74-同时开启多个计数器)
+  - [7.4. 启用固定用途计数器代码](#74-启用固定用途计数器代码)
+  - [7.5. 同时开启多个计数器](#75-同时开启多个计数器)
 - [8. 全局状态寄存器](#8-全局状态寄存器)
   - [8.1. OvfBuffer位（bit62）](#81-ovfbuffer位bit62)
   - [8.2. CondChgd位（bit63）](#82-condchgd位bit63)
@@ -45,7 +45,7 @@
   - [10.3. 设置PMI handler](#103-设置pmi-handler)
   - [10.4. 编写PMI handler](#104-编写pmi-handler)
   - [10.5. 清counter溢出标志位](#105-清counter溢出标志位)
-  - [10.6. 设置counter溢出条件](#106-设置counter溢出条件)
+  - [10.6. 设置counter溢出条件: 计数器写入最大值](#106-设置counter溢出条件-计数器写入最大值)
   - [10.7. 设置的事件](#107-设置的事件)
 - [11. 在PMI中冻结计数器](#11-在pmi中冻结计数器)
   - [11.1. IA32_DEUBGCTL寄存器](#111-ia32_deubgctl寄存器)
@@ -102,6 +102,8 @@
 
 **48位宽**的**IA32\_PMC！！！**和**IA32\_FIXED\_CTR！！！**寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
 
+注: 只有到达最大计数值溢出才产生中断.
+
 **通用计数器**和**固定用途计数器**都支持PMI中断。
 
 当**counter溢出**后, **CPU自动(！！！**)通过**Local APIC的LVT寄存器中的LVT Performance Counter寄存器**产生**本地中断(local interrupt**), 该寄存器提供中断相关信息, 包括中断向量等, 再通过中断向量查找IDT, 从而找到代码入口.
@@ -115,6 +117,8 @@
 ![config](./images/5.jpg)
 
 触发PEBS中断的计数器**只使用在通用计数器(！！！**)上，由**IA32\_PEBS\_ENABLE寄存器**的**bit3到bit0设置**，对应于**相应的IA32\_PMCx寄存器**。
+
+注: 只有到达最大计数值溢出才产生中断.
 
 **固定用途**的IA32\_FIXED\_CTR计数器**不支持PEBS中断**。
 
@@ -253,7 +257,7 @@ ANY置位时，当**发生符合的监控事件**时，共享**同一个processo
 
 PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor interrupt**），这个中断由**local APIC**的**LVT Performance counter寄存器设置(！！！**)。
 
-## 启用固定用途计数器代码
+## 7.4. 启用固定用途计数器代码
 
 当我们需要开启IA32\_FIXED\_CTR0寄存器时，如下面代码所示。
 
@@ -272,7 +276,7 @@ PMI置位时，当发生**counter溢出**时，产生**PMI（Performance monitor
 
 置IA32\_PERF\_GLOBAL\_CTRL寄存器的bit32位（`edx[0]`），以及IA32\_FIXED\_CTR\_CTRL寄存器的bit4位（IA32\_FIXED\_CTR0的enable位）。
 
-## 7.4. 同时开启多个计数器
+## 7.5. 同时开启多个计数器
 
 利用**IA32\_PERF\_GLOBAL\_CTRL寄存器的总开关**的特色，可以同时**开启多个计数器**，如下代码是**同时开启IA32\_PMC0**与**IA32\_FIXED\_CTR0**的示例。
 
@@ -530,7 +534,7 @@ dump\_perfmon（）函数实现在lib\perfmon.asm文件里。关于local APIC的
 
 这个宏定义在inc\perfmon.inc头文件里，将清IA32\_PERF\_GLOBAL\_STATUS寄存器的所有溢出标志位，通过向IA32\_PERF\_GLOBAL\_OVF\_CTRL寄存器的相应位写入1值来达到。
 
-## 10.6. 设置counter溢出条件
+## 10.6. 设置counter溢出条件: 计数器写入最大值
 
 在实验设置里，我们可以通过对**IA32\_PMC0计数器**写入**最大值**来达到****快速触发PMI****的目的，这个写入最大值通过调用write\_counter\_maximum（）函数来实现。
 
