--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [概述](#概述)
-  - [0.1 检测PEBS机制是否可用](#01-检测pebs机制是否可用)
+  - [检测PEBS机制是否可用](#检测pebs机制是否可用)
 - [1 PEBS buffer](#1-pebs-buffer)
   - [1.1 64位的PEBS记录格式](#11-64位的pebs记录格式)
   - [1.2 增强的PEBS记录格式](#12-增强的pebs记录格式)
@@ -48,11 +48,11 @@ PEBS直译为**基于抽样的精确事件**。
 
 开启PEBS机制允许**当发生PEBS中断时**在**内存DS存储区域**的**PEBS buffer**里**保存处理器的context环境**。
 
-## 0.1 检测PEBS机制是否可用
+## 检测PEBS机制是否可用
 
-由于PEBS机制是建立在DS（Debug Store）存储区域之上的，在检测PEBS是否可用时还需要**先检测处理器是否支持DS机制**。
+由于**PEBS机制**是建立在DS（Debug Store）存储区域之上的，在检测PEBS是否可用时还需要**先检测处理器是否支持DS机制**。
 
-在lib\debug.asm文件里实现了一个检测函数available\_pebs()，如下。
+在`lib\debug.asm`文件里实现了一个检测函数`available_pebs()`，如下。
 
 代码清单15-10（lib\debug.asm）：
 
@@ -77,7 +77,7 @@ available_pebs_done：
       ret
 ```
 
-代码先通过**CPUID.01：EDX[21]位**来检测**是否支持DS（Debug Store**）功能，**IA32\_MISC\_ENABLE寄存器**的**bit 12位是PEBS unavailable位**，置位时表示unavailable（不可用的），为0时表示available（可用的）。
+代码先通过`CPUID.01：EDX[21]`位来检测**是否支持DS（Debug Store**）功能，**IA32\_MISC\_ENABLE寄存器**的**bit 12位是PEBS unavailable位**，置位时表示unavailable（不可用的），为0时表示available（可用的）。
 
 # 1 PEBS buffer
 
