--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-* [1 记录存放的地方](#1-记录存放的地方)
-* [2 记录的形式](#2-记录的形式)
-* [3 何时进行记录](#3-何时进行记录)
+- [1. 记录存放的地方](#1-记录存放的地方)
+- [2. 记录的形式](#2-记录的形式)
+- [3. 何时进行记录](#3-何时进行记录)
 
 <!-- /code_chunk_output -->
 
@@ -13,7 +13,7 @@
 
 >branch record记录在哪里？以什么形式？什么时候开始记录？
 
-# 1 记录存放的地方
+# 1. 记录存放的地方
 
 在Intel处理器上，**branch record**可以**记录在下面的三个地方**。
 
@@ -25,7 +25,7 @@
 
 处理器并**不能同时存放在上面的三个地方(！！！**)中，对于**不同的微架构**处理器可以**有限度**地支持**同时存放在LBR stack和BTS区域(！！！**)里。
 
-# 2 记录的形式
+# 2. 记录的形式
 
 branch record记录着**branch record的trace（轨迹**），包括：**from（从哪里**）地址和**to（目标**）地址。处理器以下面的形式记录。
 
@@ -35,6 +35,6 @@ branch record记录着**branch record的trace（轨迹**），包括：**from（
 
 **不同的微架构**处理器支持的**from/to寄存器数量不同**。从**Nehalem微架构**的处理器开始支持**16对from/to寄存器**（包括以后的Westmere和Sandy Bridge微架构）。在Atom家族上支持8对from/to寄存器，而更早的处理器仅支持4对from/to寄存器（如Core 2 Duo处理器上）。
 
-# 3 何时进行记录
+# 3. 何时进行记录
 
 当处理器支持**last branch记录功能**时，可以在**IA32\_DEBUG寄存器**中相关的控制位来**开启分支记录功能**。一旦开启**立即生效**，处理器将对接下来发生的**branch**、**Interrupt**及**Exception**记录在上面所提及的**地方**，即**LBR stack**、**system bus**或者**内存中的BTS buffer**区域。
