--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/3. IA32_DEBUGCTL寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/3. IA32_DEBUGCTL寄存器.md
@@ -3,41 +3,43 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-	* [0.1 LBR（Last Branch Record）位](#01-lbrlast-branch-record位)
-	* [0.2 BTF（single\-step on branch）位](#02-btfsingle-step-on-branch位)
-	* [0.3 TR（trace record message）位](#03-trtrace-record-message位)
-	* [0.4 BTS（branch trace store）位](#04-btsbranch-trace-store位)
-	* [0.5 BTINT（branch trace interrupt）位](#05-btintbranch-trace-interrupt位)
-* [1 配置Branch trace record的存放](#1-配置branch-trace-record的存放)
-* [2 CPL\-qualified branch record（受CPL限制的BTS）](#2-cpl-qualified-branch-record受cpl限制的bts)
-	* [2.1 查询是否支持CPL-qualified功能](#21-查询是否支持cpl-qualified功能)
-	* [2.2 配置CPL\-qualified功能](#22-配置cpl-qualified功能)
-* [3 冻结监控](#3-冻结监控)
-	* [3.1 冻结LBR监控](#31-冻结lbr监控)
-	* [3.2 冻结Performance monitoring counter监控](#32-冻结performance-monitoring-counter监控)
-	* [3.3 在SMM里冻结所有监控](#33-在smm里冻结所有监控)
-	* [3.4 测试是否支持FREEZE\_WHILE\_SMM\_EN位](#34-测试是否支持freeze_while_smm_en位)
-	* [3.5 Core外的PMI请求](#35-core外的pmi请求)
-	* [3.6 PMI中断](#36-pmi中断)
+- [IA32_DEBUGCTL控制寄存器(Branch记录功能)](#ia32_debugctl控制寄存器branch记录功能)
+  - [LBR（Last Branch Record）位](#lbrlast-branch-record位)
+  - [BTF（single\-step on branch）位](#btfsingle-step-on-branch位)
+  - [TR（trace record message）位](#trtrace-record-message位)
+  - [BTS（branch trace store）位](#btsbranch-trace-store位)
+  - [BTINT（branch trace interrupt）位](#btintbranch-trace-interrupt位)
+- [配置Branch trace record的存放](#配置branch-trace-record的存放)
+- [2 CPL\-qualified branch record（受CPL限制的BTS）](#2-cpl-qualified-branch-record受cpl限制的bts)
+  - [2.1 查询是否支持CPL-qualified功能](#21-查询是否支持cpl-qualified功能)
+  - [2.2 配置CPL\-qualified功能](#22-配置cpl-qualified功能)
+- [3 冻结监控](#3-冻结监控)
+  - [3.1 冻结LBR监控](#31-冻结lbr监控)
+  - [3.2 冻结Performance monitoring counter监控](#32-冻结performance-monitoring-counter监控)
+  - [3.3 在SMM里冻结所有监控](#33-在smm里冻结所有监控)
+  - [3.4 测试是否支持FREEZE\_WHILE\_SMM\_EN位](#34-测试是否支持freeze_while_smm_en位)
+  - [3.5 Core外的PMI请求](#35-core外的pmi请求)
+  - [3.6 PMI中断](#36-pmi中断)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# IA32_DEBUGCTL控制寄存器(Branch记录功能)
 
-处理器的**Branch记录功能开启**由一个**总的寄存器IA32\_DEBUGCTL**进行控制。IA32\_DEBUGCTL是**架构化（architectural）的MSR寄存器**，所有支持last branch record功能的微架构的处理器中，IA32\_DEBUGCTL寄存器的**地址都是统一的(！！！**)，在**1D9H地址**上。
+处理器的**Branch记录功能开启**由一个**总的寄存器IA32\_DEBUGCTL**进行控制。
+
+IA32\_DEBUGCTL是**架构化（architectural）的MSR寄存器**，所有支持last branch record功能的微架构的处理器中，IA32\_DEBUGCTL寄存器的**地址都是统一的(！！！**)，在**1D9H地址**上。
 
 ![config](./images/2.jpg)
 
 上面这是在Nehalem微架构上的IA32\_DEBUGCTL寄存器，这个寄存器结构也同样适合在Westmere和Sandy Bridge微架构的处理器上。
 
-## 0.1 LBR（Last Branch Record）位
+## LBR（Last Branch Record）位
 
 这个位用来**开启LBR stack**的使用。当**LBR=1**时，处理器将在**LBR stack中**记录处理器的**branch/interrupt/exception**的记录（**from和to地址**）。当LBR=0时，处理器将不会在LBR stack中记录。
 
 值得注意的是，当**发生debug异常**（\#**DB异常！！！**）时，处理器会**对LBR位进行清位**。这意味着，**不能捕捉到\#DB异常的trace！！！**，在\#**DB handler退出**时也**不会恢复LBR的值**，需要**软件置位来重新开启LBR记录功能(！！！**)。
 
-## 0.2 BTF（single\-step on branch）位
+## BTF（single\-step on branch）位
 
 这个控制位的开启可以使**每个single\-step（单步调试**）基于**每次的branch（分支**），而**不是基于每条指令**。
 
@@ -49,25 +51,25 @@
 
 如果**call/jmp指令**引发**task switch（任务切换**），处理器将**不会发生single\-step调试异常（BTF被忽略**）。**debugger软件**应该使用**TSS的T标志**位来**产生task switch时**的\#**DB异常**。
 
-## 0.3 TR（trace record message）位
+## TR（trace record message）位
 
 设置TR位可以**开启BTM（Branch Trace Message）的产生**。当TR=1时，每次发生**branch**、**interrupt**及**exception**时，处理器将**产生BTM记录**送往**system bus**或记录在**BTS区域（依赖于是否开启BTS控制位**），否则将**不会产生BTM记录**。
 
 值得注意的是，当**进入\#DB handler**时，处理器**会维持TR的值**，也就是**BTM的产生依然是有效(！！！**)的。即使**LBR位被清**，**TR=1**时，处理器**依旧会更新LBR stack**（这点产生了疑惑）。
 
-## 0.4 BTS（branch trace store）位
+## BTS（branch trace store）位
 
 设置**BTS位**可以让处理器使用**BTS buffer存储区域**来**记录分支**，不过还需要**依赖于TR控制位**。
 
 当**BTS=1**并且**TR=1**时，处理器每次检测到发生**branch**、**interrupt**及**exception**时**产生BTM记录**，并将BTM存储在**内存DS（Debug Store）区域**内的**BTS buffer**里。
 
-## 0.5 BTINT（branch trace interrupt）位
+## BTINT（branch trace interrupt）位
 
 当**BTINT=1**时，允许处理器在检测到**BTS buffer满**时产生一个**DS interrupt(！！！**)，这个DS interrupt将使用由**Local APIC的LVT Performance寄存器**中设置的**PMI（Performance Monitoring Interrupt）中断handler(！！！**)处理。
 
 当**BTINT=0**时，BTS buffer将以一个**环形回路**的形式存在。当BTS buffer满时自动**回绕到BTS buffer的base（buffer头部**）继续记录。
 
-# 1 配置Branch trace record的存放
+# 配置Branch trace record的存放
 
 前面提及Branch trace record可以存放在**三个地方**：**LBR stack**，**system bus**，以及**BTS buffer区域**，到底存放在哪里由上面所说的IA32\_DEBUGCTL寄存器的**LBR**、**TR**、**BTS**，以及**BTINT位**来决定，如下表所示。
 
