--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -50,7 +50,10 @@ PEBS直译为**基于抽样的精确事件**。
 
 ## 检测PEBS机制是否可用
 
-由于**PEBS机制**是建立在DS（Debug Store）存储区域之上的，在检测PEBS是否可用时还需要**先检测处理器是否支持DS机制**。
+由于**PEBS机制**是建立在DS（Debug Store）存储区域之上的.
+
+1. **先检测处理器是否支持DS机制**, CPUID
+2. 再检测**PEBS是否可用**时, RDMSR
 
 在`lib\debug.asm`文件里实现了一个检测函数`available_pebs()`，如下。
 
