--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
@@ -27,7 +27,9 @@
 
 # 2. 记录的形式
 
-branch record记录着**branch record的trace（轨迹**），包括：**from（从哪里**）地址和**to（目标**）地址。处理器以下面的形式记录。
+branch record记录着**branch record的trace（轨迹**），包括：**from（从哪里**）地址和**to（目标**）地址。
+
+处理器以下面的形式记录。
 
 ① 在**LBR stack**中使用**处理器**提供的**数对from/to寄存器**：**MSR\_LASTBRANCH\_n\_FROM\_IP**和**MSR\_LASTBRANCH\_n\_TO\_IP**，这些寄存器是**MSR寄存器中的一部分**。
 
