--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/5. 使用LBR捕捉branch trace.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/5. 使用LBR捕捉branch trace.md
@@ -3,31 +3,31 @@
 
 <!-- code_chunk_output -->
 
-* [1 基本原理](#1-基本原理)
-	* [1.1 LBR stack中的TOP指针工作方式](#11-lbr-stack中的top指针工作方式)
-* [2 LBR的过滤功能](#2-lbr的过滤功能)
-	* [2.1 MSR\_LBR\_SELECT寄存器](#21-msr_lbr_select寄存器)
-	* [2.2 过滤CPL=0时的branch](#22-过滤cpl0时的branch)
-	* [2.3 过滤CPL！=0时的branch](#23-过滤cpl0时的branch)
-	* [2.4 过滤JCC的branch](#24-过滤jcc的branch)
-	* [2.5 过滤near relative call（相对调用）的branch](#25-过滤near-relative-call相对调用的branch)
-	* [2.6 过滤near indirect call（间接调用）的branch](#26-过滤near-indirect-call间接调用的branch)
-	* [2.7 过滤near ret（near返回）的branch](#27-过滤near-retnear返回的branch)
-	* [2.8 过滤near indirect jmp（间接跳转）的branch](#28-过滤near-indirect-jmp间接跳转的branch)
-	* [2.9 过滤near relative jmp（相对跳转）的branch](#29-过滤near-relative-jmp相对跳转的branch)
-	* [2.10 过滤far branch](#210-过滤far-branch)
-	* [2.11 使用LBR过滤功能](#211-使用lbr过滤功能)
-* [3 实验](#3-实验)
-	* [3.1 测试一](#31-测试一)
-	* [3.2 测试二](#32-测试二)
+- [1. 基本原理](#1-基本原理)
+  - [1.1. LBR stack中的TOP指针工作方式](#11-lbr-stack中的top指针工作方式)
+- [2. LBR的过滤功能](#2-lbr的过滤功能)
+  - [2.1. MSR_LBR_SELECT寄存器](#21-msr_lbr_select寄存器)
+  - [2.2. 过滤CPL=0时的branch](#22-过滤cpl0时的branch)
+  - [2.3. 过滤CPL!=0时的branch](#23-过滤cpl0时的branch)
+  - [2.4. 过滤JCC的branch](#24-过滤jcc的branch)
+  - [2.5. 过滤near relative call（相对调用）的branch](#25-过滤near-relative-call相对调用的branch)
+  - [2.6. 过滤near indirect call（间接调用）的branch](#26-过滤near-indirect-call间接调用的branch)
+  - [2.7. 过滤near ret（near返回）的branch](#27-过滤near-retnear返回的branch)
+  - [2.8. 过滤near indirect jmp（间接跳转）的branch](#28-过滤near-indirect-jmp间接跳转的branch)
+  - [2.9. 过滤near relative jmp（相对跳转）的branch](#29-过滤near-relative-jmp相对跳转的branch)
+  - [2.10. 过滤far branch](#210-过滤far-branch)
+  - [2.11. 使用LBR过滤功能](#211-使用lbr过滤功能)
+- [3. 实验](#3-实验)
+  - [3.1. 测试一](#31-测试一)
+  - [3.2. 测试二](#32-测试二)
 
 <!-- /code_chunk_output -->
 
-# 1 基本原理
+# 1. 基本原理
 
 现在，我们可以使用**LBR stack**来监控**所有最近的branch、interrupt，以及exception**，除了前面所述的几种情形。
 
-① 发生\#**DB异常**时**不能被捕捉到branch trace**，LBR将**被冻结**。
+① 发生`#DB异常`时**不能被捕捉到branch trace**，LBR将**被冻结**。
 
 ② 当FREEZE\_LBRS\_ON\_PMI被置位，发生的**PMI中断**时，LBR将**被冻结**。
 
@@ -169,15 +169,15 @@ l10：
 
 由于使用连续的jmp指令产生分支，我们看到在这些分支记录中，**前一条记录的to\_ip值**是**后一条记录的from\_ip**值。**当前TOP指针**指向**第10号的FROM\_IP/TO\_IP寄存器**。
 
-## 1.1 LBR stack中的TOP指针工作方式
+## 1.1. LBR stack中的TOP指针工作方式
 
 我们看到**当前的top指针值是10**，而**0是空**的，这个结果就很能说明问题：**LBR stack**和**内存栈**的**工作原理一样**（先push指向下一条记录位置，再记录），所**不同的是生长方向**。在**内存stack**中，当**push**时，先将**esp减4再压入值**。而LBR stack在记录时，先将**top加1**再**写入From\_IP和To_IP寄存器(！！！**)。
 
-# 2 LBR的过滤功能
+# 2. LBR的过滤功能
 
 **CPL\-qualified BTS功能**只能用于**BTS**上，于是从Nehalem微架构开始（及后续的Westmere和SandyBirdge）**增强了LBR**功能，允许处理器**对LBR进行过滤**，屏蔽一些branch trace不进行记录，包括**CPL限制功能**。
 
-## 2.1 MSR\_LBR\_SELECT寄存器
+## 2.1. MSR_LBR_SELECT寄存器
 
 在**增强的LBR功能**里，处理器可以通过设置一些**过滤条件**来对**某些branch trace进行屏蔽**，这些过滤条件由一个**MSR\_LBR\_SELECT寄存器**来实现，这个寄存器的地址在**1C8H**。
 
@@ -195,19 +195,19 @@ MSR\_LBR\_SELECT是一个**mask寄存器**，也就是说当**相应的位置位
 
 MSR\_LBR\_SELECT允许**对9种branch**进行过滤。
 
-## 2.2 过滤CPL=0时的branch
+## 2.2. 过滤CPL=0时的branch
 
 当CPL\_EQ\_0=1时，处理器运行在CPL=0级别时将过滤所有branch。
 
-## 2.3 过滤CPL！=0时的branch
+## 2.3. 过滤CPL!=0时的branch
 
 当CPL\_NEQ\_0=1时，处理器运行在CPL！=0时（即1、2及3级）将过滤所有branch。
 
-## 2.4 过滤JCC的branch
+## 2.4. 过滤JCC的branch
 
 当JCC=1时，处理器将**过滤所有Jcc指令的branch**，Jcc指令中的**cc是条件码**，关于cc条件码请参考2.5.2.4节的描述。
 
-## 2.5 过滤near relative call（相对调用）的branch
+## 2.5. 过滤near relative call（相对调用）的branch
 
 当NEAR\_REL\_CALL=1时，处理器将**过滤所有near（段内）的相对call指令的branch**，这个relative call是指基于IP/EIP/RIP指令指针偏移的call指令。而near是指段内的call/jmp。
 
@@ -221,15 +221,15 @@ next：nop                        ； 90
 
 上面这条call指令属于relative call，它被编译出来的opcode是E8，实质上所有的relative call都是near类型的（不可能属于far类型）。
 
-## 2.6 过滤near indirect call（间接调用）的branch
+## 2.6. 过滤near indirect call（间接调用）的branch
 
 当NEAR\_IND\_CALL=1时，处理器将过滤所有的间接near call指令的branch，这个indirect call（间接调用）中的indirect是指EIP值是间接从操作数里得到，这个操作数或者是寄存器，或者是内存操作数。
 
 哪类call属于near indirect call呢？依据call指令的操作数有两类情形。
 
-① call reg16/32/64：使用寄存器操作数。
+① `call reg16/32/64`：使用寄存器操作数。
 
-② call [mem]：使用memory操作数。
+② `call [mem]`：使用memory操作数。
 
 如下代码展示了两种near indirect call形式。
 
@@ -244,7 +244,7 @@ func：ret
 
 当call指令操作数是寄存器时这个call必然是near类型。当操作数是内存时可能属于far类型，参见后面的far branch描述。
 
-## 2.7 过滤near ret（near返回）的branch
+## 2.7. 过滤near ret（near返回）的branch
 
 当NEAR_RET=1时，处理器将过滤所有near ret指令的branch。near ret是与near call配套的指令。在指令助记符方面，near ret和far ret是有区别的。
 
@@ -252,7 +252,7 @@ func：ret
 
 ② far ret指令的助记符是RETF，它的opcode是CBH或CAH。
 
-## 2.8 过滤near indirect jmp（间接跳转）的branch
+## 2.8. 过滤near indirect jmp（间接跳转）的branch
 
 当NEAR\_IND\_JMP=1时，处理器将过滤所有的near indirect jmp指令的branch，和near indirect call的情形一样，下面两类属于near indirect jmp指令。
 
@@ -276,7 +276,7 @@ target：
 
 这真是让人费煞思量，NEAR\_IND\_JMP=1时，间接等于同时也将NEAR\_IND\_CALL置位。
 
-## 2.9 过滤near relative jmp（相对跳转）的branch
+## 2.9. 过滤near relative jmp（相对跳转）的branch
 
 当NEAR\_REL\_JMP=1时，处理器将过滤relative jmp指令的branch，relative jmp也是基于IP/EIP/RIP指令指针的偏移跳转，relative jmp依据操作数的长度产生两个opcode码：EBH和E9H。
 
@@ -284,7 +284,7 @@ target：
 
 因此，当NEAR\_REL\_JMP=1时，它的效果还要附加上将NEAR\_REL\_CALL置位。
 
-## 2.10 过滤far branch
+## 2.10. 过滤far branch
 
 当FAR\_BRANCH=1时，处理器将过滤所有的far branch，包括far call和far jmp情形。far call或jmp指令的操作数将是far pointer形式，这个far pointer包括direct形式和indirect形式。
 
@@ -304,7 +304,7 @@ target：
 
 上面这9个过滤条件可以同时设置多个组合来达到过滤多个branch trace，这样可以使用LBR有效地监控某一些branch事件。
 
-## 2.11 使用LBR过滤功能
+## 2.11. 使用LBR过滤功能
 
 下面我们将设置几组过滤条件来测试LBR的过滤功能。
 
@@ -426,7 +426,7 @@ msg1        db 10，0                         ； 空字符串（换行）
 
 同时，我们也看到执行int指令进行中断调用也被成功记录在LBR stack上。
 
-# 3 实验
+# 3. 实验
 
 >实验14\-4：测试jmp分支的过滤条件
 
@@ -436,7 +436,7 @@ msg1        db 10，0                         ； 空字符串（换行）
 
 ② 将所有的jmp指令过滤条件置位，除FAR\_BRANCH条件外。
 
-## 3.1 测试一
+## 3.1. 测试一
 
 在测试一里将过滤所有jmp分支，包括indirect和relative的jmp指令，所有的Jcc（条件跳转），还包括far jmp（远跳转）的情况。我们需要设置：
 
@@ -474,7 +474,7 @@ msg1        db 10，0                         ； 空字符串（换行）
 
 ③ 当FAR\_BRANCH=1时，同时也将Int 0x40中断调用产生的分支记录过滤了。
 
-## 3.2 测试二
+## 3.2. 测试二
 
 下面我们再看看测试二，在这里，我们需要改一下测试代码，修改的部分如下。
 
